@@ -14,33 +14,44 @@
 package com.google.devtools.build.lib.bazel.repository.downloader;
 
 import static com.google.common.collect.ImmutableList.toImmutableList;
+import static java.nio.charset.StandardCharsets.ISO_8859_1;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
+import com.google.auth.Credentials;
+import com.google.auto.value.AutoValue;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Ascii;
 import com.google.common.base.Preconditions;
-import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.devtools.build.lib.events.Event;
-import com.google.devtools.build.lib.events.Reporter;
+import com.google.common.io.Closer;
+import com.google.devtools.build.lib.authandtls.Netrc;
+import com.google.devtools.build.lib.authandtls.NetrcCredentials;
+import com.google.devtools.build.lib.authandtls.NetrcParser;
+import com.google.devtools.build.lib.util.OS;
+import com.google.devtools.build.lib.vfs.Path;
+import com.google.devtools.build.lib.vfs.PathFragment;
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.StringReader;
-import java.io.UncheckedIOException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.net.URI;
+import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.function.Consumer;
-import java.util.function.Function;
+import java.util.Optional;
+import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import javax.annotation.Nullable;
+import net.starlark.java.syntax.Location;
 
 /**
  * Helper class for taking URLs and converting them according to an optional config specified by
@@ -54,83 +65,161 @@ public class UrlRewriter {
   private static final ImmutableSet<String> REWRITABLE_SCHEMES = ImmutableSet.of("http", "https");
 
   private final UrlRewriterConfig config;
-  private final Function<URL, List<URL>> rewriter;
-  private final Consumer<String> log;
 
   @VisibleForTesting
-  UrlRewriter(Consumer<String> log, String filePathForErrorReporting, Reader reader)
+  UrlRewriter(List<String> filePathsForErrorReporting, List<Reader> readers)
       throws UrlRewriterParseException {
-    this.log = Preconditions.checkNotNull(log);
-    Preconditions.checkNotNull(reader, "UrlRewriterConfig source must be set");
-    this.config = new UrlRewriterConfig(filePathForErrorReporting, reader);
+    Preconditions.checkNotNull(readers, "UrlRewriterConfig source must be set");
+    Preconditions.checkNotNull(
+        filePathsForErrorReporting, "UrlRewriterConfig filePath must be set");
+    Preconditions.checkArgument(
+        filePathsForErrorReporting.size() == readers.size(),
+        "filePath and readers size must be equal");
 
-    this.rewriter = this::rewrite;
+    this.config = new UrlRewriterConfig(filePathsForErrorReporting, readers);
   }
 
   /**
    * Obtain a new {@code UrlRewriter} configured with the specified config file.
    *
-   * @param configPath Path to the config file to use. May be null.
-   * @param reporter Used for logging when URLs are rewritten.
+   * @param configPaths Paths to the config file to use. May be null.
    */
-  public static UrlRewriter getDownloaderUrlRewriter(String configPath, Reporter reporter)
+  public static UrlRewriter getDownloaderUrlRewriter(
+      Path workspaceRoot, @Nullable List<PathFragment> configPaths)
       throws UrlRewriterParseException {
-    Consumer<String> log = str -> reporter.handle(Event.info(str));
-
-    if (Strings.isNullOrEmpty(configPath)) {
-      return new UrlRewriter(log, "", new StringReader(""));
+    // "empty" UrlRewriter shouldn't alter auth headers
+    if (configPaths == null
+        || configPaths.isEmpty()
+        || configPaths.stream().anyMatch(PathFragment::isEmpty)) {
+      return new UrlRewriter(ImmutableList.of(""), ImmutableList.of(new StringReader("")));
     }
 
-    try (BufferedReader reader = Files.newBufferedReader(Paths.get(configPath))) {
-      return new UrlRewriter(log, configPath, reader);
+    // There have been reports (eg. https://github.com/bazelbuild/bazel/issues/22104) that
+    // there are occasional errors when `configFile` can't be found, and when this happens
+    // investigation suggests that the current working directory isn't the workspace root.
+    List<Path> actualConfigPaths = configPaths.stream().map(workspaceRoot::getRelative).toList();
+
+    List<Path> notFoundConfigPaths =
+        actualConfigPaths.stream().filter(Predicate.not(Path::exists)).toList();
+    if (!notFoundConfigPaths.isEmpty()) {
+      throw new UrlRewriterParseException(
+          String.format(
+              "Unable to find downloader config file %s",
+              notFoundConfigPaths.stream()
+                  .map(Path::getPathString)
+                  .collect(Collectors.joining(","))));
+    }
+
+    // Java's try-with-resources doesn't handle dynamic amounts of AutoCloseable resources, so use
+    // Closer to register and close.
+    Closer closer = Closer.create();
+    try { // For IOExceptions coming from Closer.
+      try {
+        List<Reader> readers = new ArrayList<>();
+        for (Path actualConfigPath : actualConfigPaths) {
+          BufferedReader br =
+              new BufferedReader(new InputStreamReader(actualConfigPath.getInputStream(), UTF_8));
+          closer.register(br);
+          readers.add(br);
+        }
+        return new UrlRewriter(
+            configPaths.stream().map(PathFragment::getPathString).toList(), readers);
+      } catch (Throwable e) {
+        throw closer.rethrow(e, UrlRewriterParseException.class);
+      } finally {
+        closer.close();
+      }
     } catch (IOException e) {
-      throw new UncheckedIOException(e);
+      throw new UrlRewriterParseException(e.getMessage());
     }
   }
 
   /**
-   * Rewrites {@code urls} using the configuration provided to {@link
-   * #getDownloaderUrlRewriter(String, Reporter)}. The returned list of URLs may be empty if the
-   * configuration used blocks all the input URLs.
+   * Rewrites {@code urls} using the configuration provided to {@link #getDownloaderUrlRewriter}.
+   * The returned list of URLs may be empty if the configuration used blocks all the input URLs.
    *
    * @param urls The input list of {@link URL}s. May be empty.
    * @return The amended lists of URLs.
    */
-  public List<URL> amend(List<URL> urls) {
+  public ImmutableList<RewrittenURL> amend(List<URI> urls) {
     Objects.requireNonNull(urls, "URLS to check must be set but may be empty");
 
-    ImmutableList<URL> rewritten =
-        urls.stream().map(rewriter).flatMap(Collection::stream).collect(toImmutableList());
-
-    if (!urls.equals(rewritten)) {
-      log.accept(String.format("Rewritten %s as %s", urls, rewritten));
-    }
-
-    return rewritten;
+    return urls.stream().map(this::rewrite).flatMap(Collection::stream).collect(toImmutableList());
   }
 
-  private ImmutableList<URL> rewrite(URL url) {
+  /**
+   * Updates {@code authHeaders} using the userInfo available in the provided {@code urls}. Note
+   * that if the same url is present in both {@code authHeaders} and <b>download config</b> then it
+   * will be overridden with the value from <b>download config</b>.
+   *
+   * @param urls The input list of {@link URL}s. May be empty.
+   * @param authHeaders A map of the URLs and their corresponding auth tokens.
+   * @return A map of the updated authentication headers.
+   */
+  public Map<URI, Map<String, List<String>>> updateAuthHeaders(
+      List<RewrittenURL> urls,
+      Map<URI, Map<String, List<String>>> authHeaders,
+      Credentials netrcCreds) {
+    Map<URI, Map<String, List<String>>> updatedAuthHeaders = new HashMap<>(authHeaders);
+
+    for (RewrittenURL url : urls) {
+      // if URL was not re-written by UrlRewriter in first place, we should not attach auth headers
+      // to it
+      if (!url.rewritten()) {
+        continue;
+      }
+
+      String userInfo = url.url().getUserInfo();
+      if (userInfo != null) {
+        String token = "Basic " + Base64.getEncoder().encodeToString(userInfo.getBytes(ISO_8859_1));
+        updatedAuthHeaders.put(
+            url.url(), ImmutableMap.of("Authorization", ImmutableList.of(token)));
+      } else if (netrcCreds != null) {
+        try {
+          Map<String, List<String>> urlAuthHeaders = netrcCreds.getRequestMetadata(url.url());
+          if (urlAuthHeaders == null || urlAuthHeaders.isEmpty()) {
+            continue;
+          }
+          // there could be multiple Auth headers, take the first one
+          Map.Entry<String, List<String>> firstAuthHeader =
+              urlAuthHeaders.entrySet().stream().findFirst().get();
+          if (firstAuthHeader.getValue() != null && !firstAuthHeader.getValue().isEmpty()) {
+            updatedAuthHeaders.put(
+                url.url(),
+                ImmutableMap.of(
+                    firstAuthHeader.getKey(), ImmutableList.of(firstAuthHeader.getValue().get(0))));
+          }
+        } catch (IOException e) {
+          // If the credentials extraction failed, we're letting bazel try without credentials.
+        }
+      }
+    }
+
+    return ImmutableMap.copyOf(updatedAuthHeaders);
+  }
+
+  private ImmutableList<RewrittenURL> rewrite(URI url) {
     Preconditions.checkNotNull(url);
 
     // Cowardly refuse to rewrite non-HTTP(S) urls
     if (REWRITABLE_SCHEMES.stream()
-        .noneMatch(scheme -> Ascii.equalsIgnoreCase(scheme, url.getProtocol()))) {
-      return ImmutableList.of(url);
+        .noneMatch(scheme -> Ascii.equalsIgnoreCase(scheme, url.getScheme()))) {
+      return ImmutableList.of(RewrittenURL.create(url, false));
     }
 
-    List<URL> rewrittenUrls = applyRewriteRules(url);
+    ImmutableList<RewrittenURL> rewrittenUrls = applyRewriteRules(url);
 
-    ImmutableList.Builder<URL> toReturn = ImmutableList.builder();
+    ImmutableList.Builder<RewrittenURL> toReturn = ImmutableList.builder();
     // Now iterate over the URLs
-    for (URL consider : rewrittenUrls) {
+    for (RewrittenURL consider : rewrittenUrls) {
       // If there's an allow entry, add it to the set to return and continue
-      if (isAllowMatched(consider)) {
+      if (isAllowMatched(consider.url())) {
         toReturn.add(consider);
         continue;
       }
 
       // If there's no block that matches the domain, add it to the set to return and continue
-      if (!isBlockMatched(consider)) {
+      if (!isBlockMatched(consider.url())) {
         toReturn.add(consider);
       }
     }
@@ -138,7 +227,7 @@ public class UrlRewriter {
     return toReturn.build();
   }
 
-  private boolean isAllowMatched(URL url) {
+  private boolean isAllowMatched(URI url) {
     for (String host : config.getAllowList()) {
       if (isMatchingHostName(url, host)) {
         return true;
@@ -147,7 +236,7 @@ public class UrlRewriter {
     return false;
   }
 
-  private boolean isBlockMatched(URL url) {
+  private boolean isBlockMatched(URI url) {
     for (String host : config.getBlockList()) {
       // Allow a wild-card block
       if ("*".equals(host)) {
@@ -161,12 +250,13 @@ public class UrlRewriter {
     return false;
   }
 
-  private static boolean isMatchingHostName(URL url, String host) {
-    return host.equals(url.getHost()) || url.getHost().endsWith("." + host);
+  private static boolean isMatchingHostName(URI url, String host) {
+    String urlHost = url.getHost();
+    return urlHost != null && (host.equals(urlHost) || urlHost.endsWith("." + host));
   }
 
-  private ImmutableList<URL> applyRewriteRules(URL url) {
-    String withoutScheme = url.toString().substring(url.getProtocol().length() + 3);
+  private ImmutableList<RewrittenURL> applyRewriteRules(URI url) {
+    String withoutScheme = url.toString().substring(url.getScheme().length() + 3);
 
     ImmutableSet.Builder<String> rewrittenUrls = ImmutableSet.builder();
 
@@ -183,30 +273,90 @@ public class UrlRewriter {
     }
 
     if (!matchMade) {
-      return ImmutableList.of(url);
+      return ImmutableList.of(RewrittenURL.create(url, false));
     }
 
     return rewrittenUrls.build().stream()
-        .map(urlString -> prefixWithProtocol(urlString, url.getProtocol()))
+        .map(urlString -> prefixWithProtocol(urlString, url.getScheme()))
+        .map(plainUrl -> RewrittenURL.create(plainUrl, true))
         .collect(toImmutableList());
   }
 
   /** Prefixes url with protocol if not already prefixed by {@link #REWRITABLE_SCHEMES} */
-  private static URL prefixWithProtocol(String url, String protocol) {
-    try {
-      for (String schemaPrefix : REWRITABLE_SCHEMES) {
-        if (url.startsWith(schemaPrefix + "://")) {
-          return new URL(url);
-        }
+  private static URI prefixWithProtocol(String url, String protocol) {
+    for (String schemaPrefix : REWRITABLE_SCHEMES) {
+      if (url.startsWith(schemaPrefix + "://")) {
+        return URI.create(url);
       }
-      return new URL(protocol + "://" + url);
-    } catch (MalformedURLException e) {
-      throw new IllegalStateException(e);
+    }
+    return URI.create(protocol + "://" + url);
+  }
+
+  /**
+   * Create a new {@link Credentials} object by parsing the .netrc file with following order to
+   * search it:
+   *
+   * <ol>
+   *   <li>If environment variable $NETRC exists, use it as the path to the .netrc file
+   *   <li>Fallback to $HOME/.netrc or $USERPROFILE/.netrc
+   * </ol>
+   *
+   * @return the {@link Credentials} object or {@code null} if there is no .netrc file.
+   * @throws UrlRewriterParseException in case the credentials can't be constructed.
+   */
+  // TODO : consider re-using RemoteModule.newCredentialsFromNetrc
+  @Nullable
+  public static Credentials newCredentialsFromNetrc(
+      Map<String, String> clientEnv, Path workingDirectory) throws UrlRewriterParseException {
+    final Optional<String> homeDir;
+    if (OS.getCurrent() == OS.WINDOWS) {
+      homeDir = Optional.ofNullable(clientEnv.get("USERPROFILE"));
+    } else {
+      homeDir = Optional.ofNullable(clientEnv.get("HOME"));
+    }
+    String netrcFileString =
+        Optional.ofNullable(clientEnv.get("NETRC"))
+            .orElseGet(() -> homeDir.map(home -> home + "/.netrc").orElse(null));
+    if (netrcFileString == null) {
+      return null;
+    }
+    Location location = Location.fromFileLineColumn(netrcFileString, 0, 0);
+    // In case Bazel is not started from a valid workspace.
+    if (workingDirectory == null) {
+      return null;
+    }
+    // Using the getRelative() method ensures:
+    //  - If netrcFileString is an absolute path, use as it is.
+    //  - If netrcFileString is a relative path, it's resolved to an absolute path with the current
+    //    working directory.
+    Path netrcFile = workingDirectory.getRelative(netrcFileString);
+    if (netrcFile.exists()) {
+      try {
+        Netrc netrc = NetrcParser.parseAndClose(netrcFile.getInputStream());
+        return new NetrcCredentials(netrc);
+      } catch (IOException e) {
+        throw new UrlRewriterParseException(
+            "Failed to parse " + netrcFile.getPathString() + ": " + e.getMessage(), location);
+      }
+    } else {
+      return null;
     }
   }
 
   @Nullable
   public String getAllBlockedMessage() {
     return config.getAllBlockedMessage();
+  }
+
+  /** Holds the URL along with meta-info, such as whether URL was re-written or not. */
+  @AutoValue
+  public abstract static class RewrittenURL {
+    static RewrittenURL create(URI url, boolean rewritten) {
+      return new AutoValue_UrlRewriter_RewrittenURL(url, rewritten);
+    }
+
+    abstract URI url();
+
+    abstract boolean rewritten();
   }
 }
