@@ -13,6 +13,11 @@
 // limitations under the License.
 package com.google.devtools.build.lib.runtime.commands;
 
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static com.google.devtools.build.lib.runtime.Command.BuildPhase.NONE;
+import static java.nio.charset.StandardCharsets.ISO_8859_1;
+
+import com.google.common.base.Ascii;
 import com.google.common.base.CaseFormat;
 import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
@@ -27,21 +32,27 @@ import com.google.devtools.build.lib.analysis.BlazeVersionInfo;
 import com.google.devtools.build.lib.analysis.ConfiguredRuleClassProvider;
 import com.google.devtools.build.lib.analysis.NoBuildEvent;
 import com.google.devtools.build.lib.events.Event;
+import com.google.devtools.build.lib.events.Reporter;
 import com.google.devtools.build.lib.runtime.BlazeCommand;
 import com.google.devtools.build.lib.runtime.BlazeCommandResult;
 import com.google.devtools.build.lib.runtime.BlazeCommandUtils;
-import com.google.devtools.build.lib.runtime.BlazeModule;
 import com.google.devtools.build.lib.runtime.BlazeRuntime;
 import com.google.devtools.build.lib.runtime.Command;
 import com.google.devtools.build.lib.runtime.CommandEnvironment;
 import com.google.devtools.build.lib.runtime.InfoItem;
+import com.google.devtools.build.lib.runtime.OptionsSupplier;
 import com.google.devtools.build.lib.runtime.commands.proto.BazelFlagsProto;
 import com.google.devtools.build.lib.server.FailureDetails;
 import com.google.devtools.build.lib.server.FailureDetails.FailureDetail;
 import com.google.devtools.build.lib.server.FailureDetails.HelpCommand.Code;
 import com.google.devtools.build.lib.util.StringUtil;
+import com.google.devtools.build.lib.util.StringUtilities;
 import com.google.devtools.build.lib.util.io.OutErr;
+import com.google.devtools.common.options.Converter;
 import com.google.devtools.common.options.Converters;
+import com.google.devtools.common.options.EnumConverter;
+import com.google.devtools.common.options.HelpVerbosity;
+import com.google.devtools.common.options.HtmlUtils;
 import com.google.devtools.common.options.Option;
 import com.google.devtools.common.options.OptionDefinition;
 import com.google.devtools.common.options.OptionDocumentationCategory;
@@ -49,32 +60,35 @@ import com.google.devtools.common.options.OptionEffectTag;
 import com.google.devtools.common.options.OptionFilterDescriptions;
 import com.google.devtools.common.options.OptionMetadataTag;
 import com.google.devtools.common.options.OptionsBase;
+import com.google.devtools.common.options.OptionsClass;
 import com.google.devtools.common.options.OptionsParser;
-import com.google.devtools.common.options.OptionsParser.HelpVerbosity;
 import com.google.devtools.common.options.OptionsParsingResult;
+import com.google.errorprone.annotations.CanIgnoreReturnValue;
+import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
+import javax.annotation.Nullable;
 
 /** The 'blaze help' command, which prints all available commands as well as specific help pages. */
 @Command(
-  name = "help",
-  options = {HelpCommand.Options.class},
-  allowResidue = true,
-  mustRunInWorkspace = false,
-  shortDescription = "Prints help for commands, or the index.",
-  completion = "command|{startup_options,target-syntax,info-keys}",
-  help = "resource:help.txt"
-)
+    name = "help",
+    buildPhase = NONE,
+    options = {HelpCommand.Options.class},
+    allowResidue = true,
+    mustRunInWorkspace = false,
+    shortDescription = "Prints help for commands, or the index.",
+    completion = "command|{startup_options,target-syntax,info-keys}",
+    help = "resource:help.txt")
 public final class HelpCommand implements BlazeCommand {
   private static final Joiner SPACE_JOINER = Joiner.on(" ");
 
@@ -84,38 +98,37 @@ public final class HelpCommand implements BlazeCommand {
    */
   private static final Escaper HTML_ESCAPER = HtmlEscapers.htmlEscaper();
 
-  public static class Options extends OptionsBase {
+  /** Options for the {@code help} command. */
+  @OptionsClass
+  public abstract static class Options extends OptionsBase {
 
     @Option(
-      name = "help_verbosity",
-      defaultValue = "medium",
-      converter = Converters.HelpVerbosityConverter.class,
-      documentationCategory = OptionDocumentationCategory.LOGGING,
-      effectTags = {OptionEffectTag.AFFECTS_OUTPUTS, OptionEffectTag.TERMINAL_OUTPUT},
-      help = "Select the verbosity of the help command."
-    )
-    public OptionsParser.HelpVerbosity helpVerbosity;
+        name = "help_verbosity",
+        defaultValue = "medium",
+        converter = Converters.HelpVerbosityConverter.class,
+        documentationCategory = OptionDocumentationCategory.LOGGING,
+        effectTags = {OptionEffectTag.TERMINAL_OUTPUT},
+        help = "Select the verbosity of the help command.")
+    public abstract HelpVerbosity getHelpVerbosity();
 
     @Option(
-      name = "long",
-      abbrev = 'l',
-      defaultValue = "null",
-      expansion = {"--help_verbosity=long"},
-      documentationCategory = OptionDocumentationCategory.LOGGING,
-      effectTags = {OptionEffectTag.AFFECTS_OUTPUTS, OptionEffectTag.TERMINAL_OUTPUT},
-      help = "Show full description of each option, instead of just its name."
-    )
-    public Void showLongFormOptions;
+        name = "long",
+        abbrev = 'l',
+        defaultValue = "null",
+        expansion = {"--help_verbosity=long"},
+        documentationCategory = OptionDocumentationCategory.LOGGING,
+        effectTags = {OptionEffectTag.TERMINAL_OUTPUT},
+        help = "Show full description of each option, instead of just its name.")
+    public abstract Void getShowLongFormOptions();
 
     @Option(
-      name = "short",
-      defaultValue = "null",
-      expansion = {"--help_verbosity=short"},
-      documentationCategory = OptionDocumentationCategory.LOGGING,
-      effectTags = {OptionEffectTag.AFFECTS_OUTPUTS, OptionEffectTag.TERMINAL_OUTPUT},
-      help = "Show only the names of the options, not their types or meanings."
-    )
-    public Void showShortFormOptions;
+        name = "short",
+        defaultValue = "null",
+        expansion = {"--help_verbosity=short"},
+        documentationCategory = OptionDocumentationCategory.LOGGING,
+        effectTags = {OptionEffectTag.TERMINAL_OUTPUT},
+        help = "Show only the names of the options, not their types or meanings.")
+    public abstract Void getShowShortFormOptions();
   }
 
   @Override
@@ -130,37 +143,48 @@ public final class HelpCommand implements BlazeCommand {
       emitGenericHelp(outErr, runtime);
       return BlazeCommandResult.success();
     }
+    if (options.getResidue().getFirst().equals("completion")) {
+      if (options.getResidue().size() > 2) {
+        String message = "The completion command takes at most one argument";
+        env.getReporter().handle(Event.error(message));
+        return createFailureResult(message, Code.MISSING_ARGUMENT);
+      }
+      String shell = options.getResidue().size() > 1 ? options.getResidue().get(1) : null;
+      return emitCompletionHelp(shell, runtime, env.getReporter());
+    }
     if (options.getResidue().size() != 1) {
       String message = "You must specify exactly one command";
       env.getReporter().handle(Event.error(message));
       return createFailureResult(message, Code.MISSING_ARGUMENT);
     }
-    String helpSubject = options.getResidue().get(0);
+    String helpSubject = options.getResidue().getFirst();
     String productName = runtime.getProductName();
     // Go through the custom subjects before going through Bazel commands.
     switch (helpSubject) {
-      case "startup_options":
+      case "startup_options" -> {
         emitBlazeVersionInfo(outErr, runtime.getProductName());
-        emitStartupOptions(outErr, helpOptions.helpVerbosity, runtime);
+        emitStartupOptions(outErr, helpOptions.getHelpVerbosity(), runtime);
         return BlazeCommandResult.success();
-      case "target-syntax":
+      }
+      case "target-syntax" -> {
         emitBlazeVersionInfo(outErr, runtime.getProductName());
         emitTargetSyntaxHelp(outErr, productName);
 
         return BlazeCommandResult.success();
-      case "info-keys":
+      }
+      case "info-keys" -> {
         emitInfoKeysHelp(env, outErr);
         return BlazeCommandResult.success();
-      case "completion":
-        emitCompletionHelp(runtime, outErr);
-        return BlazeCommandResult.success();
-      case "flags-as-proto":
+      }
+      case "flags-as-proto" -> {
         emitFlagsAsProtoHelp(runtime, outErr);
         return BlazeCommandResult.success();
-      case "everything-as-html":
+      }
+      case "everything-as-html" -> {
         new HtmlEmitter(runtime).emit(outErr);
         return BlazeCommandResult.success();
-      default: // fall out
+      }
+      default -> {}
     }
 
     BlazeCommand command = runtime.getCommandMap().get(helpSubject);
@@ -173,18 +197,18 @@ public final class HelpCommand implements BlazeCommand {
     outErr.printOut(
         BlazeCommandUtils.getUsage(
             command.getClass(),
-            helpOptions.helpVerbosity,
-            runtime.getBlazeModules(),
+            helpOptions.getHelpVerbosity(),
+            runtime.getOptionsSuppliers(),
             runtime.getRuleClassProvider(),
             productName));
 
     return BlazeCommandResult.success();
   }
 
-  private void emitBlazeVersionInfo(OutErr outErr, String productName) {
+  private static void emitBlazeVersionInfo(OutErr outErr, String productName) {
     String releaseInfo = BlazeVersionInfo.instance().getReleaseName();
-    String line = String.format("[%s %s]", productName, releaseInfo);
-    outErr.printOut(String.format("%80s\n", line));
+    String line = "[%s %s]".formatted(productName, releaseInfo);
+    outErr.printOut("%80s\n".formatted(line));
   }
 
   private void emitStartupOptions(
@@ -194,12 +218,52 @@ public final class HelpCommand implements BlazeCommand {
             "startup_options",
             "resource:startup_options.txt",
             getClass(),
-            BlazeCommandUtils.getStartupOptions(runtime.getBlazeModules()),
+            BlazeCommandUtils.getStartupOptions(runtime.getOptionsSuppliers()),
             helpVerbosity,
             runtime.getProductName()));
   }
 
-  private void emitCompletionHelp(BlazeRuntime runtime, OutErr outErr) {
+  private static BlazeCommandResult emitCompletionHelp(
+      @Nullable String shell, BlazeRuntime runtime, Reporter reporter) {
+    OutErr outErr = reporter.getOutErr();
+    return switch (shell) {
+      case "bash" -> {
+        outErr.printOutLn(loadCompletionScript("bazel-complete-header.bash"));
+        emitCompletionVariables(runtime, outErr);
+        outErr.printOutLn(loadCompletionScript("bazel-complete-template.bash"));
+        yield BlazeCommandResult.success();
+      }
+      case null -> {
+        // Preserved for backwards compatibility: print only the variables part of the bash
+        // completion script.
+        emitCompletionVariables(runtime, outErr);
+        yield BlazeCommandResult.success();
+      }
+      default -> {
+        String message =
+            "The completion command only supports 'bash' as an argument, got '%s'".formatted(shell);
+        reporter.handle(Event.error(message));
+        yield createFailureResult(message, Code.MISSING_ARGUMENT);
+      }
+    };
+  }
+
+  private static String loadCompletionScript(String basename) {
+    try {
+      String resourceName = "/scripts/" + basename;
+      try (var stream = HelpCommand.class.getResourceAsStream(resourceName)) {
+        if (stream == null) {
+          throw new IOException(resourceName + " not found.");
+        }
+        return new String(stream.readAllBytes(), ISO_8859_1);
+      }
+    } catch (IOException e) {
+      throw new IllegalStateException(
+          "Failed to read built-in resource %s: %s".formatted(basename, e.getMessage()), e);
+    }
+  }
+
+  private static void emitCompletionVariables(BlazeRuntime runtime, OutErr outErr) {
     Map<String, BlazeCommand> commandsByName = getSortedCommands(runtime);
 
     outErr.printOutLn("BAZEL_COMMAND_LIST=\"" + SPACE_JOINER.join(commandsByName.keySet()) + "\"");
@@ -235,10 +299,10 @@ public final class HelpCommand implements BlazeCommand {
     visitAllOptions(runtime, startupOptionVisitor, commandOptionVisitor);
   }
 
-  private void emitFlagsAsProtoHelp(BlazeRuntime runtime, OutErr outErr) {
+  private static void emitFlagsAsProtoHelp(BlazeRuntime runtime, OutErr outErr) {
     Map<String, BazelFlagsProto.FlagInfo.Builder> flags = new HashMap<>();
 
-    Predicate<OptionDefinition> allOptions = option -> true;
+    Predicate<OptionDefinition> allOptions = unused -> true;
     BiConsumer<String, OptionDefinition> visitor =
         (commandName, option) -> {
           if (ImmutableSet.copyOf(option.getOptionMetadataTags())
@@ -246,17 +310,14 @@ public final class HelpCommand implements BlazeCommand {
             return;
           }
           BazelFlagsProto.FlagInfo.Builder info =
-              flags.computeIfAbsent(option.getOptionName(), key -> createFlagInfo(option));
+              flags.computeIfAbsent(option.getOptionName(), unused -> createFlagInfo(option));
           info.addCommands(commandName);
         };
     Consumer<OptionsParser> startupOptionVisitor =
-        parser -> {
-          parser.visitOptions(allOptions, option -> visitor.accept("startup", option));
-        };
+        parser -> parser.visitOptions(allOptions, option -> visitor.accept("startup", option));
     CommandOptionVisitor commandOptionVisitor =
-        (commandName, commandAnnotation, parser) -> {
-          parser.visitOptions(allOptions, option -> visitor.accept(commandName, option));
-        };
+        (commandName, unused, parser) ->
+            parser.visitOptions(allOptions, option -> visitor.accept(commandName, option));
 
     visitAllOptions(runtime, startupOptionVisitor, commandOptionVisitor);
 
@@ -268,35 +329,81 @@ public final class HelpCommand implements BlazeCommand {
     outErr.printOut(Base64.getEncoder().encodeToString(collectionBuilder.build().toByteArray()));
   }
 
-  private BazelFlagsProto.FlagInfo.Builder createFlagInfo(OptionDefinition option) {
+  private static BazelFlagsProto.FlagInfo.Builder createFlagInfo(OptionDefinition option) {
     BazelFlagsProto.FlagInfo.Builder flagBuilder = BazelFlagsProto.FlagInfo.newBuilder();
     flagBuilder.setName(option.getOptionName());
-    flagBuilder.setHasNegativeFlag(option.hasNegativeOption());
+    flagBuilder.setHasNegativeFlag(option.usesBooleanValueSyntax());
     flagBuilder.setDocumentation(option.getHelpText());
     flagBuilder.setAllowsMultiple(option.allowsMultiple());
+    flagBuilder.setRequiresValue(option.requiresValue());
+
     if (option.getAbbreviation() != '\0') {
       flagBuilder.setAbbreviation(String.valueOf(option.getAbbreviation()));
     }
+    if (!option.getOldOptionName().isEmpty()) {
+      flagBuilder.setOldName(option.getOldOptionName());
+    }
+
+    List<String> optionEffectTags =
+        Arrays.stream(option.getOptionEffectTags()).map(Enum::toString).toList();
+    flagBuilder.addAllEffectTags(optionEffectTags);
+
+    List<String> optionMetadataTags =
+        Arrays.stream(option.getOptionMetadataTags()).map(Enum::toString).toList();
+    flagBuilder.addAllMetadataTags(optionMetadataTags);
+
+    if (option.getDocumentationCategory() != null) {
+      flagBuilder.setDocumentationCategory(option.getDocumentationCategory().toString());
+    }
+
+    if (!option.isSpecialNullDefault()) {
+      flagBuilder.setDefaultValue(option.getUnparsedDefaultValue());
+    }
+
+    if (!option.getDeprecationWarning().isEmpty()) {
+      flagBuilder.setDeprecationWarning(option.getDeprecationWarning());
+    }
+
+    if (option.getOptionExpansion().length > 0) {
+      flagBuilder.addAllOptionExpansions(ImmutableList.copyOf(option.getOptionExpansion()));
+    }
+
+    Converter<?> converter = option.getConverter();
+    String converterClassName = converter.getClass().getSimpleName();
+    if (converterClassName.endsWith("Converter")) {
+      String shortName =
+          converterClassName.substring(0, converterClassName.length() - "Converter".length());
+      flagBuilder.setTypeConverter(shortName);
+    }
+    if (converter instanceof EnumConverter<?> enumConverter) {
+      List<String> enumValues =
+          Arrays.stream(enumConverter.getEnumType().getEnumConstants())
+              .map(Object::toString)
+              .collect(toImmutableList());
+      flagBuilder.addAllEnumValues(enumValues);
+    }
+
     return flagBuilder;
   }
 
-  private void visitAllOptions(
+  private static void visitAllOptions(
       BlazeRuntime runtime,
       Consumer<OptionsParser> startupOptionVisitor,
       CommandOptionVisitor commandOptionVisitor) {
     // First startup_options
-    Iterable<BlazeModule> blazeModules = runtime.getBlazeModules();
+    Iterable<OptionsSupplier> optionsSuppliers = runtime.getOptionsSuppliers();
     ConfiguredRuleClassProvider ruleClassProvider = runtime.getRuleClassProvider();
     Map<String, BlazeCommand> commandsByName = getSortedCommands(runtime);
 
     Iterable<Class<? extends OptionsBase>> options =
-        BlazeCommandUtils.getStartupOptions(blazeModules);
+        BlazeCommandUtils.getStartupOptions(optionsSuppliers);
     startupOptionVisitor.accept(OptionsParser.builder().optionsClasses(options).build());
 
     for (Map.Entry<String, BlazeCommand> e : commandsByName.entrySet()) {
       BlazeCommand command = e.getValue();
       Command annotation = command.getClass().getAnnotation(Command.class);
-      options = BlazeCommandUtils.getOptions(command.getClass(), blazeModules, ruleClassProvider);
+      options =
+          BlazeCommandUtils.getOptions(command.getClass(), optionsSuppliers, ruleClassProvider);
       commandOptionVisitor.visit(
           e.getKey(), annotation, OptionsParser.builder().optionsClasses(options).build());
     }
@@ -312,50 +419,49 @@ public final class HelpCommand implements BlazeCommand {
             "target-syntax",
             "resource:target-syntax.txt",
             getClass(),
-            ImmutableList.<Class<? extends OptionsBase>>of(),
-            OptionsParser.HelpVerbosity.MEDIUM,
+            ImmutableList.of(),
+            HelpVerbosity.MEDIUM,
             productName));
   }
 
-  private void emitInfoKeysHelp(CommandEnvironment env, OutErr outErr) {
+  private static void emitInfoKeysHelp(CommandEnvironment env, OutErr outErr) {
     for (InfoItem item :
         InfoCommand.getInfoItemMap(env, OptionsParser.builder().build()).values()) {
-      outErr.printOut(String.format("%-23s %s\n", item.getName(), item.getDescription()));
+      outErr.printOut("%-23s %s\n".formatted(item.getName(), item.getDescription()));
     }
   }
 
-  private void emitGenericHelp(OutErr outErr, BlazeRuntime runtime) {
-    outErr.printOut(String.format("Usage: %s <command> <options> ...\n\n",
-            runtime.getProductName()));
+  private static void emitGenericHelp(OutErr outErr, BlazeRuntime runtime) {
+    outErr.printOut("Usage: %s <command> <options> ...\n\n".formatted(runtime.getProductName()));
     outErr.printOut("Available commands:\n");
 
-    Map<String, BlazeCommand> commandsByName = runtime.getCommandMap();
-    List<String> namesInOrder = new ArrayList<>(commandsByName.keySet());
-    Collections.sort(namesInOrder);
-
-    for (String name : namesInOrder) {
-      BlazeCommand command = commandsByName.get(name);
+    for (Map.Entry<String, BlazeCommand> entry : getSortedCommands(runtime).entrySet()) {
+      String name = entry.getKey();
+      BlazeCommand command = entry.getValue();
       Command annotation = command.getClass().getAnnotation(Command.class);
       if (annotation.hidden()) {
         continue;
       }
 
-      String shortDescription = annotation.shortDescription().
-          replace("%{product}", runtime.getProductName());
-      outErr.printOut(String.format("  %-19s %s\n", name, shortDescription));
+      String shortDescription =
+          annotation.shortDescription().replace("%{product}", runtime.getProductName());
+      outErr.printOut("  %-19s %s\n".formatted(name, shortDescription));
     }
 
-    outErr.printOut("\n");
-    outErr.printOut("Getting more help:\n");
-    outErr.printOut(String.format("  %s help <command>\n", runtime.getProductName()));
-    outErr.printOut("                   Prints help and options for <command>.\n");
-    outErr.printOut(String.format("  %s help startup_options\n", runtime.getProductName()));
-    outErr.printOut(String.format("                   Options for the JVM hosting %s.\n",
-        runtime.getProductName()));
-    outErr.printOut(String.format("  %s help target-syntax\n", runtime.getProductName()));
-    outErr.printOut("                   Explains the syntax for specifying targets.\n");
-    outErr.printOut(String.format("  %s help info-keys\n", runtime.getProductName()));
-    outErr.printOut("                   Displays a list of keys used by the info command.\n");
+    outErr.printOut(
+        """
+
+        Getting more help:
+          %1$s help <command>
+                           Prints help and options for <command>.
+          %1$s help startup_options
+                           Options for the JVM hosting %1$s.
+          %1$s help target-syntax
+                           Explains the syntax for specifying targets.
+          %1$s help info-keys
+                           Displays a list of keys used by the info command.
+        """
+            .formatted(runtime.getProductName()));
   }
 
   private static final class HtmlEmitter {
@@ -376,8 +482,8 @@ public final class HelpCommand implements BlazeCommand {
         if (annotation.hidden()) {
           continue;
         }
-        String shortDescription = annotation.shortDescription().
-            replace("%{product}", runtime.getProductName());
+        String shortDescription =
+            annotation.shortDescription().replace("%{product}", runtime.getProductName());
 
         result.append("<tr>\n");
         result.append(
@@ -390,24 +496,33 @@ public final class HelpCommand implements BlazeCommand {
       result.append("\n");
 
       result.append("<h2>Startup Options</h2>\n");
-      appendOptionsHtml(result, BlazeCommandUtils.getStartupOptions(runtime.getBlazeModules()));
+      appendOptionsHtml(
+          result,
+          BlazeCommandUtils.getStartupOptions(runtime.getOptionsSuppliers()),
+          ImmutableList.of(),
+          "startup_options");
       result.append("\n");
 
       result.append("<h2><a name=\"common_options\">Options Common to all Commands</a></h2>\n");
-      appendOptionsHtml(result, BlazeCommandUtils.getCommonOptions(runtime.getBlazeModules()));
+      appendOptionsHtml(
+          result,
+          BlazeCommandUtils.getCommonOptions(runtime.getOptionsSuppliers()),
+          ImmutableList.of(),
+          "common_options");
       result.append("\n");
 
       for (Map.Entry<String, BlazeCommand> e : commandsByName.entrySet()) {
         result.append(
             String.format(
-                "<h2><a name=\"%s\">%s Options</a></h2>\n", e.getKey(), capitalize(e.getKey())));
+                "<h2><a name=\"%s\">%s Options</a></h2>\n",
+                e.getKey(), StringUtilities.capitalize(e.getKey())));
         BlazeCommand command = e.getValue();
         Command annotation = command.getClass().getAnnotation(Command.class);
         if (annotation.hidden()) {
           continue;
         }
         List<String> inheritedCmdNames = new ArrayList<>();
-        for (Class<? extends BlazeCommand> base : annotation.inherits()) {
+        for (Class<? extends BlazeCommand> base : annotation.inheritsOptionsFrom()) {
           String name = base.getAnnotation(Command.class).name();
           inheritedCmdNames.add(String.format("<a href=\"#%s\">%s</a>", name, name));
         }
@@ -418,80 +533,86 @@ public final class HelpCommand implements BlazeCommand {
         }
         Set<Class<? extends OptionsBase>> options = new HashSet<>();
         Collections.addAll(options, annotation.options());
-        for (BlazeModule blazeModule : runtime.getBlazeModules()) {
-          Iterables.addAll(options, blazeModule.getCommandOptions(annotation));
+        for (OptionsSupplier supplier : runtime.getOptionsSuppliers()) {
+          Iterables.addAll(options, supplier.getCommandOptions(annotation.name()));
         }
-        appendOptionsHtml(result, options);
+        List<String> optionsToIgnore =
+            appendOptionsHtml(result, options, ImmutableList.of(), e.getKey());
         result.append("\n");
 
         // For now, we print all the configuration options in a list after all the non-configuration
-        // options. Note that usesConfigurationOptions is only true for the build command right now.
+        // options.
         if (annotation.usesConfigurationOptions()) {
           options.clear();
           Collections.addAll(options, annotation.options());
-          if (annotation.usesConfigurationOptions()) {
-            options.addAll(runtime.getRuleClassProvider().getConfigurationOptions());
-          }
-          appendOptionsHtml(result, options);
+          options.addAll(runtime.getRuleClassProvider().getFragmentRegistry().getOptionsClasses());
+          appendOptionsHtml(result, options, optionsToIgnore, null);
           result.append("\n");
         }
       }
 
       // Describe the tags once, any mentions above should link to these descriptions.
-        String productName = runtime.getProductName();
-        ImmutableMap<OptionEffectTag, String> effectTagDescriptions =
-            OptionFilterDescriptions.getOptionEffectTagDescription(productName);
-        result.append("<h3>Option Effect Tags</h3>\n");
-        result.append("<table>\n");
-        for (OptionEffectTag tag : OptionEffectTag.values()) {
-          String tagDescription = effectTagDescriptions.get(tag);
+      String productName = runtime.getProductName();
+      ImmutableMap<OptionEffectTag, String> effectTagDescriptions =
+          OptionFilterDescriptions.getOptionEffectTagDescription(productName);
+      result.append("<h3>Option Effect Tags</h3>\n");
+      result.append("<table>\n");
+      for (OptionEffectTag tag : OptionEffectTag.values()) {
+        String tagDescription = effectTagDescriptions.get(tag);
+
+        result.append("<tr>\n");
+        result.append(
+            String.format(
+                "<td id=\"effect_tag_%s\"><code>%s</code></td>\n",
+                tag, Ascii.toLowerCase(tag.name())));
+        result.append(String.format("<td>%s</td>\n", HTML_ESCAPER.escape(tagDescription)));
+        result.append("</tr>\n");
+      }
+      result.append("</table>\n");
+
+      ImmutableMap<OptionMetadataTag, String> metadataTagDescriptions =
+          OptionFilterDescriptions.getOptionMetadataTagDescription(productName);
+      result.append("<h3>Option Metadata Tags</h3>\n");
+      result.append("<table>\n");
+      for (OptionMetadataTag tag : OptionMetadataTag.values()) {
+        // skip the tags that are reserved for undocumented flags.
+        if (!tag.equals(OptionMetadataTag.HIDDEN) && !tag.equals(OptionMetadataTag.INTERNAL)) {
+          String tagDescription = metadataTagDescriptions.get(tag);
 
           result.append("<tr>\n");
           result.append(
               String.format(
-                  "<td id=\"effect_tag_%s\"><code>%s</code></td>\n",
-                  tag, tag.name().toLowerCase()));
+                  "<td id=\"metadata_tag_%s\"><code>%s</code></td>\n",
+                  tag, Ascii.toLowerCase(tag.name())));
           result.append(String.format("<td>%s</td>\n", HTML_ESCAPER.escape(tagDescription)));
           result.append("</tr>\n");
         }
-        result.append("</table>\n");
-
-        ImmutableMap<OptionMetadataTag, String> metadataTagDescriptions =
-            OptionFilterDescriptions.getOptionMetadataTagDescription(productName);
-        result.append("<h3>Option Metadata Tags</h3>\n");
-        result.append("<table>\n");
-        for (OptionMetadataTag tag : OptionMetadataTag.values()) {
-          // skip the tags that are reserved for undocumented flags.
-          if (!tag.equals(OptionMetadataTag.HIDDEN) && !tag.equals(OptionMetadataTag.INTERNAL)) {
-            String tagDescription = metadataTagDescriptions.get(tag);
-
-            result.append("<tr>\n");
-            result.append(
-                String.format(
-                    "<td id=\"metadata_tag_%s\"><code>%s</code></td>\n",
-                    tag, tag.name().toLowerCase()));
-            result.append(String.format("<td>%s</td>\n", HTML_ESCAPER.escape(tagDescription)));
-            result.append("</tr>\n");
-          }
-        }
-        result.append("</table>\n");
-
+      }
+      result.append("</table>\n");
 
       outErr.printOut(result.toString());
     }
 
-    private void appendOptionsHtml(
-        StringBuilder result, Iterable<Class<? extends OptionsBase>> optionsClasses) {
+    // Returns the list of appended option names.
+    @CanIgnoreReturnValue
+    private List<String> appendOptionsHtml(
+        StringBuilder result,
+        Iterable<Class<? extends OptionsBase>> optionsClasses,
+        List<String> optionsToIgnore,
+        @Nullable String commandName) {
       OptionsParser parser = OptionsParser.builder().optionsClasses(optionsClasses).build();
       String productName = runtime.getProductName();
-        result.append(
-            parser
-                .describeOptionsHtml(HTML_ESCAPER, productName)
-                .replace("%{product}", productName));
-    }
+      result.append(
+          HtmlUtils.describeOptionsHtml(parser, HTML_ESCAPER, optionsToIgnore, commandName)
+              .replace("%{product}", productName));
 
-    private static String capitalize(String s) {
-      return s.substring(0, 1).toUpperCase(Locale.US) + s.substring(1);
+      List<String> optionNames = new ArrayList<>();
+      for (List<OptionDefinition> category : parser.getOptionsSortedByCategory().values()) {
+        for (OptionDefinition option : category) {
+          optionNames.add(option.getOptionName());
+        }
+      }
+      return optionNames;
     }
   }
 
@@ -520,4 +641,3 @@ public final class HelpCommand implements BlazeCommand {
             .build());
   }
 }
-
