@@ -15,7 +15,6 @@
 package com.google.devtools.build.lib.bazel.repository.downloader;
 
 import static com.google.common.truth.Truth.assertThat;
-import static com.google.devtools.build.lib.bazel.repository.downloader.DownloaderTestUtils.makeUrl;
 import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
@@ -27,16 +26,17 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import com.google.common.eventbus.EventBus;
 import com.google.devtools.build.lib.events.Event;
+import com.google.devtools.build.lib.events.EventBusEventHandler;
 import com.google.devtools.build.lib.events.EventHandler;
 import com.google.devtools.build.lib.events.ExtendedEventHandler;
 import com.google.devtools.build.lib.events.Reporter;
 import com.google.devtools.build.lib.testutil.ManualClock;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.Locale;
+import java.util.OptionalLong;
 import org.junit.After;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -49,11 +49,12 @@ public class ProgressInputStreamTest {
   private final ManualClock clock = new ManualClock();
   private final EventHandler eventHandler = mock(EventHandler.class);
   private final ExtendedEventHandler extendedEventHandler =
-      new Reporter(new EventBus(), eventHandler);
+      new Reporter(EventBusEventHandler.createWithNewEventBus(), eventHandler);
   private final InputStream delegate = mock(InputStream.class);
-  private final URL url = makeUrl("http://lol.example");
+  private final URI url = URI.create("http://lol.example");
   private ProgressInputStream stream =
-      new ProgressInputStream(Locale.US, clock, extendedEventHandler, 1, delegate, url, url);
+      new ProgressInputStream(
+          Locale.US, clock, extendedEventHandler, 1, delegate, url, url, OptionalLong.empty());
 
   @After
   public void after() throws Exception {
@@ -126,7 +127,15 @@ public class ProgressInputStreamTest {
   @Test
   public void bufferReadsAfterIntervalInGermany_usesPeriodAsSeparator() throws Exception {
     stream =
-        new ProgressInputStream(Locale.GERMANY, clock, extendedEventHandler, 1, delegate, url, url);
+        new ProgressInputStream(
+            Locale.GERMANY,
+            clock,
+            extendedEventHandler,
+            1,
+            delegate,
+            url,
+            url,
+            OptionalLong.empty());
     byte[] buffer = new byte[1024];
     when(delegate.read(any(byte[].class), anyInt(), anyInt())).thenReturn(1024);
     clock.advanceMillis(1);
@@ -144,15 +153,31 @@ public class ProgressInputStreamTest {
             extendedEventHandler,
             1,
             delegate,
-            new URL("http://cdn.example/foo"),
-            url);
+            URI.create("http://cdn.example/foo"),
+            url,
+            OptionalLong.empty());
     when(delegate.read()).thenReturn(42);
     assertThat(stream.read()).isEqualTo(42);
     clock.advanceMillis(1);
     assertThat(stream.read()).isEqualTo(42);
     assertThat(stream.read()).isEqualTo(42);
     verify(delegate, times(3)).read();
-    verify(eventHandler).handle(
-        Event.progress("Downloading http://lol.example via cdn.example: 2 bytes"));
+    verify(eventHandler)
+        .handle(Event.progress("Downloading http://lol.example via cdn.example: 2 bytes"));
+  }
+
+  @Test
+  public void percentualProgress() {
+    DownloadProgressEvent event =
+        new DownloadProgressEvent(
+            url, url, 25 * 1024 * 1024, OptionalLong.of(100 * 1024 * 1024), false);
+    assertThat(event.getProgress()).isEqualTo("25.0 MiB (25.0%)");
+  }
+
+  @Test
+  public void percentualProgress_zeroTotalBytes() {
+    DownloadProgressEvent event =
+        new DownloadProgressEvent(url, url, 25 * 1024 * 1024, OptionalLong.of(0), false);
+    assertThat(event.getProgress()).isEqualTo("25.0 MiB (100.0%)");
   }
 }
