@@ -13,13 +13,29 @@
 // limitations under the License.
 package com.google.devtools.build.lib.bazel.repository.downloader;
 
+import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.truth.Truth.assertThat;
+import static java.nio.charset.StandardCharsets.ISO_8859_1;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.fail;
 
+import com.google.auth.Credentials;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Iterables;
+import com.google.devtools.build.lib.authandtls.BasicHttpAuthenticationEncoder;
+import com.google.devtools.build.lib.testutil.Scratch;
+import com.google.devtools.build.lib.vfs.DigestHashFunction;
+import com.google.devtools.build.lib.vfs.FileSystem;
+import com.google.devtools.build.lib.vfs.Path;
+import com.google.devtools.build.lib.vfs.inmemoryfs.InMemoryFileSystem;
+import java.io.IOException;
+import java.io.Reader;
 import java.io.StringReader;
-import java.net.URL;
+import java.net.URI;
+import java.util.Base64;
 import java.util.List;
+import java.util.Map;
 import net.starlark.java.syntax.Location;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -29,40 +45,64 @@ import org.junit.runners.JUnit4;
 @RunWith(JUnit4.class)
 public class UrlRewriterTest {
 
+  /** Convenience wrapper to create a {@link UrlRewriter} with a single path/reader. */
+  private UrlRewriter testUrlRewriter(String filePathForErrorReporting, Reader reader)
+      throws UrlRewriterParseException {
+    return new UrlRewriter(ImmutableList.of(filePathForErrorReporting), ImmutableList.of(reader));
+  }
+
   @Test
   public void byDefaultTheUrlRewriterDoesNothing() throws Exception {
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(""));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(""));
 
-    List<URL> urls = ImmutableList.of(new URL("http://example.com"));
-    List<URL> amended = munger.amend(urls);
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("http://example.com"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
     assertThat(amended).isEqualTo(urls);
   }
 
   @Test
+  public void constructorMustHaveTheSameNumberOfFilePathsAndReaders()
+      throws UrlRewriterParseException {
+    // This has one file path and one reader - no exception is thrown.
+
+    // Two file paths, but one reader - this will fail the precondition.
+    assertThrows(
+        "filePath and readers size must be equal",
+        IllegalArgumentException.class,
+        () ->
+            new UrlRewriter(
+                ImmutableList.of("/dev/null", "/dev/null"),
+                ImmutableList.of(new StringReader(""))));
+  }
+
+  @Test
   public void shouldBeAbleToBlockParticularHostsRegardlessOfScheme() throws Exception {
     String config = "block example.com";
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls =
+    ImmutableList<URI> urls =
         ImmutableList.of(
-            new URL("http://example.com"),
-            new URL("https://example.com"),
-            new URL("http://localhost"));
-    List<URL> amended = munger.amend(urls);
+            URI.create("http://example.com"),
+            URI.create("https://example.com"),
+            URI.create("http://localhost"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("http://localhost"));
+    assertThat(amended).containsExactly(URI.create("http://localhost"));
   }
 
   @Test
   public void shouldAllowAUrlToBeRewritten() throws Exception {
     String config = "rewrite example.com/foo/(.*) mycorp.com/$1/foo";
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://example.com/foo/bar"));
-    List<URL> amended = munger.amend(urls);
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar/foo"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar/foo"));
   }
 
   @Test
@@ -70,32 +110,54 @@ public class UrlRewriterTest {
     String config =
         "rewrite example.com/foo/(.*) mycorp.com/$1/somewhere\n"
             + "rewrite example.com/foo/(.*) mycorp.com/$1/elsewhere";
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://example.com/foo/bar"));
-    List<URL> amended = munger.amend(urls);
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
     // There's no guarantee about the ordering of the rewrites
-    assertThat(amended).contains(new URL("https://mycorp.com/bar/somewhere"));
-    assertThat(amended).contains(new URL("https://mycorp.com/bar/elsewhere"));
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/somewhere"));
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/elsewhere"));
+  }
+
+  /** Same as {@link #rewritesCanExpandToMoreThanOneUrl()} but spread across two config files. */
+  @Test
+  public void rewritesCanExpandToMoreThanOneUrlWithMultipleConfigs() throws Exception {
+    String config = "rewrite example.com/foo/(.*) mycorp.com/$1/somewhere\n";
+    String config2 = "rewrite example.com/foo/(.*) mycorp.com/$1/elsewhere\n";
+    UrlRewriter munger =
+        new UrlRewriter(
+            ImmutableList.of("/dev/null", "/dev/null"),
+            ImmutableList.of(new StringReader(config), new StringReader(config2)));
+
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+
+    // There's no guarantee about the ordering of the rewrites
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/somewhere"));
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/elsewhere"));
   }
 
   @Test
   public void shouldBlockAllUrlsOtherThanSpecificOnes() throws Exception {
     String config = "" + "block *\n" + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls =
+    ImmutableList<URI> urls =
         ImmutableList.of(
-            new URL("https://foo.com"),
-            new URL("https://example.com/foo/bar"),
-            new URL("https://subdomain.example.com/qux"));
-    List<URL> amended = munger.amend(urls);
+            URI.create("https://foo.com"),
+            URI.create("https://example.com/foo/bar"),
+            URI.create("https://subdomain.example.com/qux"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
     assertThat(amended)
         .containsExactly(
-            new URL("https://example.com/foo/bar"), new URL("https://subdomain.example.com/qux"));
+            URI.create("https://example.com/foo/bar"),
+            URI.create("https://subdomain.example.com/qux"));
   }
 
   @Test
@@ -107,32 +169,40 @@ public class UrlRewriterTest {
             + "# But allow example.com\n"
             + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://foo.com"), new URL("https://example.com"));
-    List<URL> amended = munger.amend(urls);
+    ImmutableList<URI> urls =
+        ImmutableList.of(URI.create("https://foo.com"), URI.create("https://example.com"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://example.com"));
+    assertThat(amended).containsExactly(URI.create("https://example.com"));
   }
 
   @Test
   public void allowListAppliesToSubdomainsToo() throws Exception {
     String config = "" + "block *\n" + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended = munger.amend(ImmutableList.of(new URL("https://subdomain.example.com")));
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
+            .map(url -> url.url())
+            .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://subdomain.example.com"));
+    assertThat(amended).containsExactly(URI.create("https://subdomain.example.com"));
   }
 
   @Test
   public void blockListAppliesToSubdomainsToo() throws Exception {
     String config = "block example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended = munger.amend(ImmutableList.of(new URL("https://subdomain.example.com")));
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
+            .map(url -> url.url())
+            .collect(toImmutableList());
 
     assertThat(amended).isEmpty();
   }
@@ -141,24 +211,32 @@ public class UrlRewriterTest {
   public void emptyLinesAreFine() throws Exception {
     String config = "" + "\n" + "   \n" + "block *\n" + "\t  \n" + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended = munger.amend(ImmutableList.of(new URL("https://subdomain.example.com")));
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
+            .map(url -> url.url())
+            .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://subdomain.example.com"));
+    assertThat(amended).containsExactly(URI.create("https://subdomain.example.com"));
   }
 
   @Test
   public void rewritingUrlsIsAppliedBeforeBlocking() throws Exception {
     String config = "" + "block bad.com\n" + "rewrite bad.com/foo/(.*) mycorp.com/$1";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended =
-        munger.amend(
-            ImmutableList.of(new URL("https://www.bad.com"), new URL("https://bad.com/foo/bar")));
+    ImmutableList<URI> amended =
+        munger
+            .amend(
+                ImmutableList.of(
+                    URI.create("https://www.bad.com"), URI.create("https://bad.com/foo/bar")))
+            .stream()
+            .map(url -> url.url())
+            .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar"));
   }
 
   @Test
@@ -166,23 +244,32 @@ public class UrlRewriterTest {
     String config =
         "" + "block *\n" + "allow mycorp.com\n" + "rewrite bad.com/foo/(.*) mycorp.com/$1";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended =
-        munger.amend(
-            ImmutableList.of(new URL("https://www.bad.com"), new URL("https://bad.com/foo/bar")));
+    ImmutableList<URI> amended =
+        munger
+            .amend(
+                ImmutableList.of(
+                    URI.create("https://www.bad.com"), URI.create("https://bad.com/foo/bar")))
+            .stream()
+            .map(url -> url.url())
+            .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar"));
   }
 
   @Test
   public void parseError() throws Exception {
     String config = "#comment\nhello";
+    assertThrows(
+        UrlRewriterParseException.class,
+        () -> testUrlRewriter("/some/file", new StringReader(config)));
     try {
       new UrlRewriterConfig("/some/file", new StringReader(config));
       fail();
     } catch (UrlRewriterParseException e) {
       assertThat(e.getLocation()).isEqualTo(Location.fromFileLineColumn("/some/file", 2, 0));
+      assertThat(e.getMessage()).contains("Unable to parse: hello");
     }
   }
 
@@ -223,17 +310,220 @@ public class UrlRewriterTest {
             + "rewrite bad.com/foo/(.*) http://mycorp.com/$1\n"
             + "rewrite bad.com/bar/(.*) https://othercorp.com/bar/$1\n";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended =
-        munger.amend(
-            ImmutableList.of(
-                new URL("https://www.bad.com"),
-                new URL("https://bad.com/foo/bar"),
-                new URL("http://bad.com/bar/xyz")));
+    ImmutableList<URI> amended =
+        munger
+            .amend(
+                ImmutableList.of(
+                    URI.create("https://www.bad.com"),
+                    URI.create("https://bad.com/foo/bar"),
+                    URI.create("http://bad.com/bar/xyz")))
+            .stream()
+            .map(url -> url.url())
+            .collect(toImmutableList());
 
     assertThat(amended)
         .containsExactly(
-            new URL("http://mycorp.com/bar"), new URL("https://othercorp.com/bar/xyz"));
+            URI.create("http://mycorp.com/bar"), URI.create("https://othercorp.com/bar/xyz"));
+  }
+
+  @Test
+  public void rewritingUrlsWithAuthHeaders() throws Exception {
+    String creds = "user:password";
+    String firstNetrcCreds = "netrc_user_0:netrc_pw_0";
+    String secondNetrcCreds = "netrc_user_1:netrc_pw_1";
+    Credentials netrc =
+        parseNetrc(
+            "machine mycorp.com login netrc_user_0 password netrc_pw_0\n"
+                + "machine myothercorp.com login netrc_user_1 password netrc_pw_1\n"
+                + "machine no-override.com login netrc_user_2 password netrc_pw_2\n");
+    String config =
+        ""
+            + "rewrite my.example.com/foo/(.*) "
+            + creds
+            + "@mycorp.com/foo/$1\n" // this cred should from download config file
+            + "rewrite my.example.com/from_netrc/(.*) mycorp.com/from_netrc/$1\n" // this cred
+            // should come
+            // from netrc
+            + "rewrite"
+            + " my.example.com/from_other_netrc_entry/(.*)"
+            + " myothercorp.com/from_netrc/$1\n" // this cred should come from netrc
+            + "rewrite my.example.com/no_creds/(.*) myopencorp.com/no_creds/$1\n"; // should be
+    // re-written,
+    // but no auth
+    // headers added
+
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
+
+    ImmutableList<UrlRewriter.RewrittenURL> amended =
+        munger.amend(
+            ImmutableList.of(
+                URI.create("https://my.example.com/foo/bar"),
+                URI.create("https://my.example.com/from_netrc/bar"),
+                URI.create("https://my.example.com/from_other_netrc_entry/bar"),
+                URI.create("https://my.example.com/no_creds/bar"),
+                URI.create("https://should-not-be-overridden.com/")));
+    Map<URI, Map<String, List<String>>> updatedAuthHeaders =
+        munger.updateAuthHeaders(amended, ImmutableMap.of(), netrc);
+
+    String expectedToken =
+        "Basic " + Base64.getEncoder().encodeToString(creds.getBytes(ISO_8859_1));
+    String expectedFirstNetrcToken =
+        "Basic " + Base64.getEncoder().encodeToString(firstNetrcCreds.getBytes(ISO_8859_1));
+    String expectedSecondNetrcToken =
+        "Basic " + Base64.getEncoder().encodeToString(secondNetrcCreds.getBytes(ISO_8859_1));
+    // only three URLs should have auth headers
+    assertThat(updatedAuthHeaders)
+        .containsExactly(
+            new URI("https://user:password@mycorp.com/foo/bar"),
+            ImmutableMap.of("Authorization", ImmutableList.of(expectedToken)),
+            new URI("https://mycorp.com/from_netrc/bar"),
+            ImmutableMap.of("Authorization", ImmutableList.of(expectedFirstNetrcToken)),
+            new URI("https://myothercorp.com/from_netrc/bar"),
+            ImmutableMap.of("Authorization", ImmutableList.of(expectedSecondNetrcToken)));
+    // yet all four urls should be present
+    assertThat(amended)
+        .containsExactly(
+            UrlRewriter.RewrittenURL.create(
+                URI.create("https://user:password@mycorp.com/foo/bar"), true),
+            UrlRewriter.RewrittenURL.create(URI.create("https://mycorp.com/from_netrc/bar"), true),
+            UrlRewriter.RewrittenURL.create(
+                URI.create("https://myothercorp.com/from_netrc/bar"), true),
+            UrlRewriter.RewrittenURL.create(
+                URI.create("https://myopencorp.com/no_creds/bar"), true),
+            UrlRewriter.RewrittenURL.create(
+                URI.create("https://should-not-be-overridden.com/"), false));
+  }
+
+  @Test
+  public void testNetrc_emptyEnv_shouldIgnore() throws Exception {
+    ImmutableMap<String, String> clientEnv = ImmutableMap.of();
+    Path workingDir = new InMemoryFileSystem(DigestHashFunction.SHA256).getPath("/workdir");
+
+    Credentials credentials = UrlRewriter.newCredentialsFromNetrc(clientEnv, workingDir);
+
+    assertThat(credentials).isNull();
+  }
+
+  @Test
+  public void testNetrc_netrcNotExist_shouldIgnore() throws Exception {
+    String home = "/home/foo";
+    ImmutableMap<String, String> clientEnv = ImmutableMap.of("HOME", home, "USERPROFILE", home);
+    Path workingDir = new InMemoryFileSystem(DigestHashFunction.SHA256).getPath("/workdir");
+
+    Credentials credentials = UrlRewriter.newCredentialsFromNetrc(clientEnv, workingDir);
+
+    assertThat(credentials).isNull();
+  }
+
+  @Test
+  public void testNetrc_relativeNetrc_shouldUse() throws Exception {
+    FileSystem fileSystem = new InMemoryFileSystem(DigestHashFunction.SHA256);
+    Path workingDir = fileSystem.getPath("/workdir");
+    Scratch scratch = new Scratch(fileSystem);
+    scratch.file("/workdir/foo/.netrc", "machine foo.example.org login foouser password foopass");
+    ImmutableMap<String, String> clientEnv = ImmutableMap.of("NETRC", "./foo/.netrc");
+
+    Credentials credentials = UrlRewriter.newCredentialsFromNetrc(clientEnv, workingDir);
+
+    assertRequestMetadata(
+        credentials.getRequestMetadata(URI.create("https://foo.example.org")),
+        "foouser",
+        "foopass");
+  }
+
+  @Test
+  public void testNetrc_relativeNetrc_shouldIgnoreWhenNotExist() throws Exception {
+    FileSystem fileSystem = new InMemoryFileSystem(DigestHashFunction.SHA256);
+    Path workingDir = fileSystem.getPath("/workdir");
+    ImmutableMap<String, String> clientEnv = ImmutableMap.of("NETRC", "./foo/.netrc");
+
+    Credentials credentials = UrlRewriter.newCredentialsFromNetrc(clientEnv, workingDir);
+
+    assertThat(credentials).isNull();
+  }
+
+  @Test
+  public void testNetrc_netrcExist_shouldUse() throws Exception {
+    Credentials credentials = parseNetrc("machine foo.example.org login foouser password foopass");
+
+    assertThat(credentials).isNotNull();
+    assertRequestMetadata(
+        credentials.getRequestMetadata(URI.create("https://foo.example.org")),
+        "foouser",
+        "foopass");
+  }
+
+  @Test
+  public void testNetrc_netrcExist_cant_parse() throws Exception {
+    String home = "/home/foo";
+    ImmutableMap<String, String> clientEnv = ImmutableMap.of("HOME", home, "USERPROFILE", home);
+    FileSystem fileSystem = new InMemoryFileSystem(DigestHashFunction.SHA256);
+    Scratch scratch = new Scratch(fileSystem);
+    scratch.file(home + "/.netrc", "mach foo.example.org log foouser password foopass");
+
+    try {
+      UrlRewriter.newCredentialsFromNetrc(clientEnv, fileSystem.getPath("/workdir"));
+      fail();
+    } catch (UrlRewriterParseException e) {
+      assertThat(e.getLocation()).isEqualTo(Location.fromFileLineColumn("/home/foo/.netrc", 0, 0));
+    }
+  }
+
+  @Test
+  public void rewriteRuleProducingNullHostUriDoesNotCrash() throws Exception {
+    // A rewrite rule whose replacement contains an unsubstituted placeholder of the form
+    // @VAR@ causes prefixWithProtocol to produce "https://@VAR@/path". Java's URI parser
+    // splits the authority at the last '@', leaving an empty (or null) host.
+    // isMatchingHostName must not NPE — the URL should be treated as unmatched by the
+    // allow-list and fall through to the block-list.
+    String config = "block *\nrewrite (example.com)/(.*) @UNSUBSTITUTED@/$1/$2";
+    UrlRewriter rewriter = testUrlRewriter("/dev/null", new StringReader(config));
+
+    // Should not throw; the malformed rewritten URL matches nothing in the allow-list
+    // and is then blocked by "block *", so the result is an empty list.
+    ImmutableList<URI> amended =
+        rewriter.amend(ImmutableList.of(URI.create("https://example.com/foo/bar"))).stream()
+            .map(UrlRewriter.RewrittenURL::url)
+            .collect(toImmutableList());
+
+    assertThat(amended).isEmpty();
+  }
+
+  @Test
+  public void allowListDoesNotCrashOnNullHostUri() throws Exception {
+    // Guard the allow-list path: even if a rewritten URI has a null host, iterating
+    // the allow-list must not NPE.
+    String config = "allow example.com\nblock *\nrewrite (example.com)/(.*) @PLACEHOLDER@/$1/$2";
+    UrlRewriter rewriter = testUrlRewriter("/dev/null", new StringReader(config));
+
+    ImmutableList<URI> amended =
+        rewriter.amend(ImmutableList.of(URI.create("https://example.com/foo"))).stream()
+            .map(UrlRewriter.RewrittenURL::url)
+            .collect(toImmutableList());
+
+    // The rewritten URL has a null/malformed host and should NOT match the allow-list
+    // entry for "example.com", so it falls through to "block *" and is dropped.
+    assertThat(amended).isEmpty();
+  }
+
+  private static Credentials parseNetrc(String content)
+      throws IOException, UrlRewriterParseException {
+    String home = "/home/foo";
+    ImmutableMap<String, String> clientEnv = ImmutableMap.of("HOME", home, "USERPROFILE", home);
+    FileSystem fileSystem = new InMemoryFileSystem(DigestHashFunction.SHA256);
+    Path workingDir = fileSystem.getPath("/workdir");
+    Scratch scratch = new Scratch(fileSystem);
+    scratch.file(home + "/.netrc", content);
+
+    return UrlRewriter.newCredentialsFromNetrc(clientEnv, workingDir);
+  }
+
+  private static void assertRequestMetadata(
+      Map<String, List<String>> requestMetadata, String username, String password) {
+    assertThat(requestMetadata.keySet()).containsExactly("Authorization");
+    assertThat(Iterables.getOnlyElement(requestMetadata.values()))
+        .containsExactly(BasicHttpAuthenticationEncoder.encode(username, password));
   }
 }
