@@ -18,40 +18,60 @@ import static com.google.common.truth.Truth.assertWithMessage;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.google.common.base.Strings;
+import build.bazel.remote.execution.v2.Digest;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.devtools.build.lib.actions.Action;
 import com.google.devtools.build.lib.actions.ActionCompletionEvent;
 import com.google.devtools.build.lib.actions.ActionLookupData;
+import com.google.devtools.build.lib.actions.ActionLookupKey;
 import com.google.devtools.build.lib.actions.ActionOwner;
+import com.google.devtools.build.lib.actions.ActionProgressEvent;
 import com.google.devtools.build.lib.actions.ActionStartedEvent;
+import com.google.devtools.build.lib.actions.ActionUploadFinishedEvent;
+import com.google.devtools.build.lib.actions.ActionUploadStartedEvent;
 import com.google.devtools.build.lib.actions.Artifact;
 import com.google.devtools.build.lib.actions.ArtifactRoot;
 import com.google.devtools.build.lib.actions.BuildConfigurationEvent;
 import com.google.devtools.build.lib.actions.RunningActionEvent;
 import com.google.devtools.build.lib.actions.ScanningActionEvent;
 import com.google.devtools.build.lib.actions.SchedulingActionEvent;
+import com.google.devtools.build.lib.actions.cache.OutputMetadataStore;
 import com.google.devtools.build.lib.actions.util.ActionsTestUtil;
 import com.google.devtools.build.lib.analysis.ConfiguredTarget;
+import com.google.devtools.build.lib.analysis.config.BuildConfigurationValue;
+import com.google.devtools.build.lib.analysis.platform.PlatformInfo;
 import com.google.devtools.build.lib.bazel.repository.downloader.DownloadProgressEvent;
 import com.google.devtools.build.lib.buildeventstream.AnnounceBuildEventTransportsEvent;
 import com.google.devtools.build.lib.buildeventstream.BuildEventStreamProtos;
 import com.google.devtools.build.lib.buildeventstream.BuildEventTransport;
 import com.google.devtools.build.lib.buildeventstream.BuildEventTransportClosedEvent;
 import com.google.devtools.build.lib.buildtool.BuildResult;
+import com.google.devtools.build.lib.buildtool.ExecutionProgressReceiver;
 import com.google.devtools.build.lib.buildtool.buildevent.BuildCompleteEvent;
+import com.google.devtools.build.lib.buildtool.buildevent.ExecutionProgressReceiverAvailableEvent;
 import com.google.devtools.build.lib.buildtool.buildevent.TestFilteringCompleteEvent;
 import com.google.devtools.build.lib.cmdline.Label;
+import com.google.devtools.build.lib.cmdline.LabelSyntaxException;
+import com.google.devtools.build.lib.cmdline.RepositoryMapping;
 import com.google.devtools.build.lib.events.ExtendedEventHandler.FetchProgress;
-import com.google.devtools.build.lib.runtime.UiStateTracker.ProgressMode;
+import com.google.devtools.build.lib.exec.util.FakeActionInputFileCache;
+import com.google.devtools.build.lib.pkgcache.LoadingPhaseCompleteEvent;
+import com.google.devtools.build.lib.remote.Store;
+import com.google.devtools.build.lib.runtime.SkymeldUiStateTracker.BuildStatus;
 import com.google.devtools.build.lib.runtime.UiStateTracker.StrategyIds;
+import com.google.devtools.build.lib.skyframe.AnalysisProgressReceiver;
+import com.google.devtools.build.lib.skyframe.ConfigurationPhaseStartedEvent;
 import com.google.devtools.build.lib.skyframe.LoadingPhaseStartedEvent;
 import com.google.devtools.build.lib.skyframe.PackageProgressReceiver;
+import com.google.devtools.build.lib.skyframe.TopLevelStatusEvents.TestAnalyzedEvent;
 import com.google.devtools.build.lib.testutil.FoundationTestCase;
 import com.google.devtools.build.lib.testutil.ManualClock;
 import com.google.devtools.build.lib.util.DetailedExitCode;
@@ -61,8 +81,10 @@ import com.google.devtools.build.lib.vfs.Path;
 import com.google.devtools.build.lib.vfs.PathFragment;
 import com.google.devtools.build.lib.vfs.Root;
 import com.google.devtools.build.lib.view.test.TestStatus.BlazeTestStatus;
+import com.google.testing.junit.testparameterinjector.TestParameter;
+import com.google.testing.junit.testparameterinjector.TestParameterInjector;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.util.HashSet;
 import java.util.Set;
@@ -70,11 +92,29 @@ import java.util.concurrent.TimeUnit;
 import net.starlark.java.syntax.Location;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.junit.runners.JUnit4;
+import org.mockito.AdditionalMatchers;
 
 /** Tests {@link UiStateTracker}. */
-@RunWith(JUnit4.class)
+@RunWith(TestParameterInjector.class)
 public class UiStateTrackerTest extends FoundationTestCase {
+
+  @TestParameter boolean isSkymeld;
+
+  private UiStateTracker getUiStateTracker(ManualClock clock) {
+    if (isSkymeld) {
+      return new SkymeldUiStateTracker(clock);
+    } else {
+      return new UiStateTracker(clock);
+    }
+  }
+
+  private UiStateTracker getUiStateTracker(ManualClock clock, int targetWidth) {
+    if (isSkymeld) {
+      return new SkymeldUiStateTracker(clock, targetWidth);
+    } else {
+      return new UiStateTracker(clock, targetWidth);
+    }
+  }
 
   @Test
   public void testStrategyIds_getId_idsAreBitmasks() {
@@ -156,9 +196,48 @@ public class UiStateTrackerTest extends FoundationTestCase {
         ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path);
 
     Action action = mock(Action.class);
-    when(action.getProgressMessage()).thenReturn(progressMessage);
+    when(action.getProgressMessage(eq(RepositoryMapping.EMPTY))).thenReturn(progressMessage);
     when(action.getPrimaryOutput()).thenReturn(artifact);
+
+    verify(action, never()).getProgressMessage(AdditionalMatchers.not(eq(RepositoryMapping.EMPTY)));
+    verify(action, never()).getProgressMessage();
     return action;
+  }
+
+  private ActionOwner dummyActionOwner() throws LabelSyntaxException {
+    return ActionOwner.createDummy(
+        Label.parseCanonical("//foo:a"),
+        new Location("dummy-file", 0, 0),
+        /* targetKind= */ "",
+        /* buildConfigurationMnemonic= */ "",
+        /* configurationChecksum= */ "",
+        new BuildConfigurationEvent(
+            BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
+            BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
+        /* isToolConfiguration= */ true,
+        /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
+        /* aspectDescriptors= */ ImmutableList.of(),
+        /* execProperties= */ ImmutableMap.of());
+  }
+
+  private void simulateExecutionPhase(UiStateTracker uiStateTracker) {
+    uiStateTracker.loadingComplete(
+        new LoadingPhaseCompleteEvent(
+            ImmutableSet.of(), ImmutableSet.of(), RepositoryMapping.EMPTY));
+    if (this.isSkymeld) {
+      // SkymeldUiStateTracker needs to be in the configuration phase before the execution phase.
+      ((SkymeldUiStateTracker) uiStateTracker)
+          .setBuildStatusForTestingOnly(BuildStatus.ANALYSIS_COMPLETE);
+      uiStateTracker.executionPhaseStarted();
+    } else {
+      String unused = uiStateTracker.analysisComplete();
+    }
+    uiStateTracker.progressReceiverAvailable(
+        new ExecutionProgressReceiverAvailableEvent(dummyExecutionProgressReceiver()));
+  }
+
+  private ExecutionProgressReceiver dummyExecutionProgressReceiver() {
+    return new ExecutionProgressReceiver(0, null);
   }
 
   private static int longestLine(String output) {
@@ -173,30 +252,95 @@ public class UiStateTrackerTest extends FoundationTestCase {
   public void testLoadingActivity() throws IOException {
     // During loading phase, state and activity, as reported by the PackageProgressReceiver,
     // should be visible in the progress bar.
-    String state = "42 packages loaded";
-    String activity = "currently loading //src/foo/bar and 17 more";
+    String loadingState = "42 packages loaded";
+    String loadingActivity = "currently loading //src/foo/bar and 17 more";
     PackageProgressReceiver progress = mock(PackageProgressReceiver.class);
-    when(progress.progressState()).thenReturn(new Pair<>(state, activity));
+    when(progress.progressState()).thenReturn(new Pair<>(loadingState, loadingActivity));
 
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
 
     stateTracker.loadingStarted(new LoadingPhaseStartedEvent(progress));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    // When it is just loading packages.
+    LoggingTerminalWriter terminalWriterLoading =
+        new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriterLoading);
+    String loadingOutput = terminalWriterLoading.getTranscript();
+
+    assertThat(loadingOutput).contains("Loading");
+    assertThat(loadingOutput).contains(loadingState);
+    assertThat(loadingOutput).contains(loadingActivity);
+
+    // When it is configuring targets.
+    stateTracker.loadingComplete(
+        new LoadingPhaseCompleteEvent(
+            ImmutableSet.of(), ImmutableSet.of(), RepositoryMapping.EMPTY));
+    String additionalMessage = "5 targets";
+    stateTracker.additionalMessage = additionalMessage;
+    String analysisProgressString = "5 targets and 0 aspects configured";
+    AnalysisProgressReceiver analysisProgressReceiver = mock(AnalysisProgressReceiver.class);
+    when(analysisProgressReceiver.getProgressString()).thenReturn(analysisProgressString);
+    stateTracker.configurationStarted(new ConfigurationPhaseStartedEvent(analysisProgressReceiver));
+
+    LoggingTerminalWriter terminalWriterLoadingConfiguration =
+        new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriterLoadingConfiguration);
+    String loadingConfigurationOutput = terminalWriterLoadingConfiguration.getTranscript();
+    assertThat(loadingConfigurationOutput).contains("Analyzing");
+    assertThat(loadingConfigurationOutput).contains(additionalMessage);
+    assertThat(loadingConfigurationOutput).contains(loadingState);
+    assertThat(loadingConfigurationOutput).contains(loadingActivity);
+    // It should contain the analysis progress string along with the loading information.
+    assertThat(loadingConfigurationOutput).contains(analysisProgressString);
+  }
+
+  @Test
+  public void testLargeTargetCountFormattedWithCommas() throws IOException {
+    // Verify that large target counts in "Analyzing: X targets" are formatted with comma
+    // separators.
+    ManualClock clock = new ManualClock();
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+
+    ImmutableSet.Builder<Label> labelsBuilder = ImmutableSet.builder();
+    for (int i = 0; i < 12345; i++) {
+      labelsBuilder.add(Label.parseCanonicalUnchecked("//pkg:target" + i));
+    }
+    ImmutableSet<Label> labels = labelsBuilder.build();
+
+    stateTracker.loadingComplete(
+        new LoadingPhaseCompleteEvent(labels, ImmutableSet.of(), RepositoryMapping.EMPTY));
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage(
-            "Output should indicate that we are in the loading phase, but was:\n" + output)
-        .that(output.contains("Loading"))
-        .isTrue();
-    assertWithMessage("Output should contain loading state '" + state + "', but was:\n" + output)
-        .that(output.contains(state))
-        .isTrue();
-    assertWithMessage("Output should contain loading state '" + activity + "', but was:\n" + output)
-        .that(output.contains(activity))
-        .isTrue();
+    assertThat(output).contains("Analyzing:");
+    assertThat(output).contains("12,345 targets");
+  }
+
+  @Test
+  public void testSmallTargetCountNotFormattedWithCommas() throws IOException {
+    // Verify that target counts below 10,000 (IEEE style threshold) are NOT formatted with commas.
+    ManualClock clock = new ManualClock();
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+
+    ImmutableSet.Builder<Label> labelsBuilder = ImmutableSet.builder();
+    for (int i = 0; i < 1234; i++) {
+      labelsBuilder.add(Label.parseCanonicalUnchecked("//pkg:target" + i));
+    }
+    ImmutableSet<Label> labels = labelsBuilder.build();
+
+    stateTracker.loadingComplete(
+        new LoadingPhaseCompleteEvent(labels, ImmutableSet.of(), RepositoryMapping.EMPTY));
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter);
+    String output = terminalWriter.getTranscript();
+
+    assertThat(output).contains("Analyzing:");
+    assertThat(output).contains("1234 targets");
+    assertThat(output).doesNotContain("1,234 targets");
   }
 
   @Test
@@ -208,21 +352,22 @@ public class UiStateTrackerTest extends FoundationTestCase {
     ManualClock clock = new ManualClock();
     clock.advanceMillis(120000);
 
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(new ActionStartedEvent(mockAction(message, "bar/foo"), 123456789));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
-    assertWithMessage("Action message '" + message + "' should be present in output: " + output)
+    assertWithMessage("Action message '%s' should be present in output: %s", message, output)
         .that(output.contains(message))
         .isTrue();
 
     terminalWriter = new LoggingTerminalWriter();
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
-    assertWithMessage(
-            "Action message '" + message + "' should be present in short output: " + output)
+    assertWithMessage("Action message '%s' should be present in short output: %s", message, output)
         .that(output.contains(message))
         .isTrue();
   }
@@ -239,39 +384,43 @@ public class UiStateTrackerTest extends FoundationTestCase {
     clock.advanceMillis(120000);
     Action fastAction = mockAction(messageFast, "foo/fast");
     Action slowAction = mockAction(messageSlow, "bar/slow");
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(new ActionStartedEvent(fastAction, 123456789));
     stateTracker.actionStarted(new ActionStartedEvent(slowAction, 123456999));
-    stateTracker.actionCompletion(
-        new ActionCompletionEvent(20, fastAction, mock(ActionLookupData.class)));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    ActionLookupData actionLookupData = ActionLookupData.create(mock(ActionLookupKey.class), 1);
+    stateTracker.actionCompletion(
+        new ActionCompletionEvent(
+            20,
+            clock.nanoTime(),
+            fastAction,
+            new FakeActionInputFileCache(),
+            mock(OutputMetadataStore.class),
+            actionLookupData));
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Completed action '" + messageFast + "' should not be present in output: " + output)
+            "Completed action '%s' should not be present in output: %s", messageFast, output)
         .that(output.contains(messageFast))
         .isFalse();
     assertWithMessage(
-            "Only running action '" + messageSlow + "' should be present in output: " + output)
+            "Only running action '%s' should be present in output: %s", messageSlow, output)
         .that(output.contains(messageSlow))
         .isTrue();
 
     terminalWriter = new LoggingTerminalWriter();
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Completed action '"
-                + messageFast
-                + "' should not be present in short output: "
-                + output)
+            "Completed action '%s' should not be present in short output: %s", messageFast, output)
         .that(output.contains(messageFast))
         .isFalse();
     assertWithMessage(
-            "Only running action '"
-                + messageSlow
-                + "' should be present in short output: "
-                + output)
+            "Only running action '%s' should be present in short output: %s", messageSlow, output)
         .that(output.contains(messageSlow))
         .isTrue();
   }
@@ -285,7 +434,9 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     ManualClock clock = new ManualClock();
     clock.advanceMillis(120000);
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(
         new ActionStartedEvent(mockAction(messageOld, "bar/foo"), 123456789));
     for (int i = 0; i < 30; i++) {
@@ -294,22 +445,19 @@ public class UiStateTrackerTest extends FoundationTestCase {
               mockAction("Other action " + i, "some/other/actions/number" + i), 123456790 + i));
     }
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Longest running action '" + messageOld + "' should be visible in output: " + output)
+            "Longest running action '%s' should be visible in output: %s", messageOld, output)
         .that(output.contains(messageOld))
         .isTrue();
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Longest running action '"
-                + messageOld
-                + "' should be visible in short output: "
-                + output)
+            "Longest running action '%s' should be visible in short output: %s", messageOld, output)
         .that(output.contains(messageOld))
         .isTrue();
   }
@@ -319,7 +467,9 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // Verify that the number of actions shown in the progress bar can be set as sample size.
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(123));
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(2));
 
     // Start 10 actions (numbered 0 to 9).
@@ -331,22 +481,23 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     // For various sample sizes verify the progress bar
     for (int i = 1; i < 11; i++) {
-      stateTracker.setProgressMode(ProgressMode.OLDEST_ACTIONS, i);
-      LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+      stateTracker.setProgressSampleSize(i);
+      LoggingTerminalWriter terminalWriter =
+          new LoggingTerminalWriter(/* discardHighlight= */ true);
       stateTracker.writeProgressBar(terminalWriter);
       String output = terminalWriter.getTranscript();
-      assertWithMessage("Action " + (i - 1) + " should still be shown in the output: '" + output)
+      assertWithMessage("Action %s should still be shown in the output: '%s", (i - 1), output)
           .that(output.contains("A" + (i - 1) + "."))
           .isTrue();
-      assertWithMessage("Action " + i + " should not be shown in the output: " + output)
+      assertWithMessage("Action %s should not be shown in the output: %s", i, output)
           .that(output.contains("A" + i + "."))
           .isFalse();
       if (i < 10) {
-        assertWithMessage("Ellipsis symbol should be shown in output: " + output)
+        assertWithMessage("Ellipsis symbol should be shown in output: %s", output)
             .that(output.contains("..."))
             .isTrue();
       } else {
-        assertWithMessage("Ellipsis symbol should not be shown in output: " + output)
+        assertWithMessage("Ellipsis symbol should not be shown in output: %s", output)
             .that(output.contains("..."))
             .isFalse();
       }
@@ -360,7 +511,9 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(123));
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(2));
 
     stateTracker.actionStarted(
@@ -370,20 +523,20 @@ public class UiStateTrackerTest extends FoundationTestCase {
         new ActionStartedEvent(mockAction("Second action", "bar"), clock.nanoTime()));
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(20));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should be visible in output: " + output)
+    assertWithMessage("Runtime of first action should be visible in output: %s", output)
         .that(output.contains("27s"))
         .isTrue();
-    assertWithMessage("Runtime of second action should be visible in output: " + output)
+    assertWithMessage("Runtime of second action should be visible in output: %s", output)
         .that(output.contains("20s"))
         .isTrue();
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should be visible in short output: " + output)
+    assertWithMessage("Runtime of first action should be visible in short output: %s", output)
         .that(output.contains("27s"))
         .isTrue();
   }
@@ -392,7 +545,8 @@ public class UiStateTrackerTest extends FoundationTestCase {
   public void initialProgressBarTimeIndependent() {
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(123));
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    stateTracker.buildStarted();
 
     assertWithMessage("Initial progress status should be time independent")
         .that(stateTracker.progressBarTimeDependent())
@@ -403,8 +557,9 @@ public class UiStateTrackerTest extends FoundationTestCase {
   public void runningActionTimeIndependent() {
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(123));
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
+    simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(
         new ActionStartedEvent(mockAction("Some action", "foo"), clock.nanoTime()));
 
@@ -417,9 +572,11 @@ public class UiStateTrackerTest extends FoundationTestCase {
   public void testCountVisible() throws Exception {
     // The test count should be visible in the status bar, as well as the short status bar
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     TestFilteringCompleteEvent filteringComplete = mock(TestFilteringCompleteEvent.class);
-    Label labelA = Label.parseAbsolute("//foo/bar:baz", ImmutableMap.of());
+    Label labelA = Label.parseCanonical("//foo/bar:baz");
     ConfiguredTarget targetA = mock(ConfiguredTarget.class);
     when(targetA.getLabel()).thenReturn(labelA);
     ConfiguredTarget targetB = mock(ConfiguredTarget.class);
@@ -431,17 +588,17 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.testFilteringComplete(filteringComplete);
     stateTracker.testSummary(testSummary);
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
-    assertWithMessage("Test count should be visible in output: " + output)
+    assertWithMessage("Test count should be visible in output: %s", output)
         .that(output.contains(" 1 / 2 tests"))
         .isTrue();
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Test count should be visible in short output: " + output)
+    assertWithMessage("Test count should be visible in short output: %s", output)
         .that(output.contains(" 1 / 2 tests"))
         .isTrue();
   }
@@ -450,9 +607,11 @@ public class UiStateTrackerTest extends FoundationTestCase {
   public void testPassedVisible() throws Exception {
     // The last test should still be visible in the long status bar, and colored as ok if it passed.
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     TestFilteringCompleteEvent filteringComplete = mock(TestFilteringCompleteEvent.class);
-    Label labelA = Label.parseAbsolute("//foo/bar:baz", ImmutableMap.of());
+    Label labelA = Label.parseCanonical("//foo/bar:baz");
     ConfiguredTarget targetA = mock(ConfiguredTarget.class);
     when(targetA.getLabel()).thenReturn(labelA);
     ConfiguredTarget targetB = mock(ConfiguredTarget.class);
@@ -471,7 +630,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     String expected = LoggingTerminalWriter.OK + labelA;
     assertWithMessage(
-            "Sequence '" + expected + "' should be present in colored progress bar: " + output)
+            "Sequence '%s' should be present in colored progress bar: %s", expected, output)
         .that(output.contains(expected))
         .isTrue();
   }
@@ -481,9 +640,11 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // The last test should still be visible in the long status bar, and colored as fail if it
     // did not pass.
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     TestFilteringCompleteEvent filteringComplete = mock(TestFilteringCompleteEvent.class);
-    Label labelA = Label.parseAbsolute("//foo/bar:baz", ImmutableMap.of());
+    Label labelA = Label.parseCanonical("//foo/bar:baz");
     ConfiguredTarget targetA = mock(ConfiguredTarget.class);
     when(targetA.getLabel()).thenReturn(labelA);
     ConfiguredTarget targetB = mock(ConfiguredTarget.class);
@@ -502,7 +663,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     String expected = LoggingTerminalWriter.FAIL + labelA;
     assertWithMessage(
-            "Sequence '" + expected + "' should be present in colored progress bar: " + output)
+            "Sequence '%s' should be present in colored progress bar: %s", expected, output)
         .that(output.contains(expected))
         .isTrue();
   }
@@ -513,44 +674,45 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // the path implicit in it, that can also be extracted from the label. In particular,
     // the parts
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock, 70);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     Action action =
         mockAction(
             "Building some/very/very/long/path/for/some/library/directory/foo.jar (42 source"
                 + " files)",
             "some/very/very/long/path/for/some/library/directory/foo.jar");
     Label label =
-        Label.parseAbsolute(
-            "//some/very/very/long/path/for/some/library/directory:libfoo", ImmutableMap.of());
+        Label.parseCanonical("//some/very/very/long/path/for/some/library/directory:libfoo");
     ActionOwner owner =
-        ActionOwner.create(
+        ActionOwner.createDummy(
             label,
-            ImmutableList.of(),
             new Location("dummy-file", 0, 0),
-            "dummy-mnemonic",
-            "dummy-target-kind",
-            "fedcba",
+            /* targetKind= */ "dummy-target-kind",
+            /* buildConfigurationMnemonic= */ "dummy-mnemonic",
+            /* configurationChecksum= */ "fedcba",
             new BuildConfigurationEvent(
                 BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
                 BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
-            null,
-            ImmutableMap.of(),
-            null);
+            /* isToolConfiguration= */ false,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
+            /* aspectDescriptors= */ ImmutableList.of(),
+            /* execProperties= */ ImmutableMap.of());
     when(action.getOwner()).thenReturn(owner);
 
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(3));
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(5));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage("Progress bar should contain 'Building ', but was:\n" + output)
+    assertWithMessage("Progress bar should contain 'Building ', but was:\n%s", output)
         .that(output.contains("Building "))
         .isTrue();
     assertWithMessage(
-            "Progress bar should contain 'foo.jar (42 source files)', but was:\n" + output)
+            "Progress bar should contain 'foo.jar (42 source files)', but was:\n%s", output)
         .that(output.contains("foo.jar (42 source files)"))
         .isTrue();
   }
@@ -567,20 +729,145 @@ public class UiStateTrackerTest extends FoundationTestCase {
     Artifact artifact =
         ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path);
     Action action = mockAction("Some random action", primaryOutput);
-    when(action.getOwner()).thenReturn(mock(ActionOwner.class));
+    when(action.getOwner()).thenReturn(dummyActionOwner());
     when(action.getPrimaryOutput()).thenReturn(artifact);
 
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     stateTracker.runningAction(new RunningActionEvent(action, strategy));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage("Output should mention strategy '" + strategy + "', but was: " + output)
+    assertWithMessage("Output should mention strategy '%s', but was: %s", strategy, output)
         .that(output.contains(strategy))
         .isTrue();
+  }
+
+  private Action createDummyAction(String progressMessage) throws LabelSyntaxException {
+    String primaryOutput = "some/path/to/a/file";
+    Path path = outputBase.getRelative(PathFragment.create(primaryOutput));
+    Artifact artifact =
+        ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path);
+    Action action = mockAction(progressMessage, primaryOutput);
+    when(action.getOwner()).thenReturn(dummyActionOwner());
+    when(action.getPrimaryOutput()).thenReturn(artifact);
+    return action;
+  }
+
+  @Test
+  public void actionProgress_visible() throws Exception {
+    // arrange
+    ManualClock clock = new ManualClock();
+    Action action = createDummyAction("Some random action");
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
+    stateTracker.actionProgress(
+        ActionProgressEvent.create(action, "action-id", "action progress", false));
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+
+    // act
+    stateTracker.writeProgressBar(terminalWriter);
+
+    // assert
+    String output = terminalWriter.getTranscript();
+    assertThat(output).contains("action progress");
+  }
+
+  @Test
+  public void setTargetWidth_affectsSubsequentProgressBarRendering() throws Exception {
+    ManualClock clock = new ManualClock();
+    Action action = createDummyAction("Some random action");
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
+    stateTracker.actionProgress(
+        ActionProgressEvent.create(action, "action-id", "action progress", false));
+
+    LoggingTerminalWriter wideTerminalWriter =
+        new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(wideTerminalWriter);
+    assertThat(wideTerminalWriter.getTranscript()).contains("action progress");
+
+    stateTracker.setTargetWidth(30);
+
+    LoggingTerminalWriter narrowTerminalWriter =
+        new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(narrowTerminalWriter);
+    assertThat(narrowTerminalWriter.getTranscript()).doesNotContain("action progress");
+  }
+
+  @Test
+  public void actionProgress_withTooSmallWidth_progressSkipped() throws Exception {
+    // arrange
+    ManualClock clock = new ManualClock();
+    Action action = createDummyAction("Some random action");
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 30);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
+    stateTracker.actionProgress(
+        ActionProgressEvent.create(action, "action-id", "action progress", false));
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+
+    // act
+    stateTracker.writeProgressBar(terminalWriter);
+
+    // assert
+    String output = terminalWriter.getTranscript();
+    assertThat(output).doesNotContain("action progress");
+  }
+
+  @Test
+  public void actionProgress_withSmallWidth_progressShortened() throws Exception {
+    // arrange
+    ManualClock clock = new ManualClock();
+    Action action = createDummyAction("some action");
+    // The targetWidth needs to be small enough to cause shortening to occur.
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 40);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
+    stateTracker.actionProgress(
+        ActionProgressEvent.create(action, "action-id", "action progress", false));
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+
+    // act
+    stateTracker.writeProgressBar(terminalWriter);
+
+    // assert
+    String output = terminalWriter.getTranscript();
+    assertThat(output).contains("action p...");
+  }
+
+  @Test
+  public void actionProgress_multipleProgress_displayInOrder() throws Exception {
+    // arrange
+    ManualClock clock = new ManualClock();
+    Action action = createDummyAction("Some random action");
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
+    stateTracker.actionProgress(
+        ActionProgressEvent.create(action, "action-id1", "action progress 1", false));
+    stateTracker.actionProgress(
+        ActionProgressEvent.create(action, "action-id2", "action progress 2", false));
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+
+    // act
+    stateTracker.writeProgressBar(terminalWriter);
+
+    // assert
+    String output = terminalWriter.getTranscript();
+    assertThat(output).contains("action progress 1");
+    assertThat(output).doesNotContain("action progress 2");
   }
 
   @Test
@@ -594,25 +881,23 @@ public class UiStateTrackerTest extends FoundationTestCase {
     Artifact artifact =
         ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path);
     Action action = mockAction("Some random action", primaryOutput);
-    when(action.getOwner()).thenReturn(mock(ActionOwner.class));
+    when(action.getOwner()).thenReturn(dummyActionOwner());
     when(action.getPrimaryOutput()).thenReturn(artifact);
 
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     stateTracker.runningAction(new RunningActionEvent(action, strategy1));
     stateTracker.runningAction(new RunningActionEvent(action, strategy2));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
     assertWithMessage(
-            "Output should mention strategies '"
-                + strategy1
-                + "' and '"
-                + strategy2
-                + "', but was: "
-                + output)
+            "Output should mention strategies '%s' and '%s', but was: %s",
+            strategy1, strategy2, output)
         .that(output.contains(strategy1 + ", " + strategy2))
         .isTrue();
   }
@@ -623,14 +908,16 @@ public class UiStateTrackerTest extends FoundationTestCase {
     String primaryOutput2 = "some/path/to/b/file";
 
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock);
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     Path path1 = outputBase.getRelative(PathFragment.create(primaryOutput1));
     Artifact artifact1 =
         ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path1);
     Action action1 = mockAction("First random action", primaryOutput1);
-    when(action1.getOwner()).thenReturn(mock(ActionOwner.class));
+    when(action1.getOwner()).thenReturn(dummyActionOwner());
     when(action1.getPrimaryOutput()).thenReturn(artifact1);
     stateTracker.actionStarted(new ActionStartedEvent(action1, clock.nanoTime()));
 
@@ -638,7 +925,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     Artifact artifact2 =
         ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path2);
     Action action2 = mockAction("First random action", primaryOutput1);
-    when(action2.getOwner()).thenReturn(mock(ActionOwner.class));
+    when(action2.getOwner()).thenReturn(dummyActionOwner());
     when(action2.getPrimaryOutput()).thenReturn(artifact2);
     stateTracker.actionStarted(new ActionStartedEvent(action2, clock.nanoTime()));
 
@@ -651,17 +938,17 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.runningAction(new RunningActionEvent(action1, "strategy2"));
     terminalWriter.reset();
     stateTracker.writeProgressBar(terminalWriter);
-    assertThat(terminalWriter.getTranscript()).contains("3 actions, 2 running");
+    assertThat(terminalWriter.getTranscript()).contains("2 actions, 1 running");
 
     stateTracker.runningAction(new RunningActionEvent(action2, "strategy1"));
     terminalWriter.reset();
     stateTracker.writeProgressBar(terminalWriter);
-    assertThat(terminalWriter.getTranscript()).contains("3 actions running");
+    assertThat(terminalWriter.getTranscript()).contains("2 actions running");
 
     stateTracker.runningAction(new RunningActionEvent(action2, "strategy2"));
     terminalWriter.reset();
     stateTracker.writeProgressBar(terminalWriter);
-    assertThat(terminalWriter.getTranscript()).contains("4 actions running");
+    assertThat(terminalWriter.getTranscript()).contains("2 actions running");
   }
 
   private void doTestOutputLength(boolean withTest, int actions) throws Exception {
@@ -669,7 +956,9 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // keep the line limit, and show the local part of the running actions and
     // the passed test.
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock, 70);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
 
     Action foobuildAction =
         mockAction(
@@ -683,9 +972,8 @@ public class UiStateTrackerTest extends FoundationTestCase {
             "src/some/very/long/path/long/long/long/long/long/long/long/baz/bazbuild.jar");
 
     Label bartestLabel =
-        Label.parseAbsolute(
-            "//src/another/very/long/long/path/long/long/long/long/long/long/long/long/bars:bartest",
-            ImmutableMap.of());
+        Label.parseCanonical(
+            "//src/another/very/long/long/path/long/long/long/long/long/long/long/long/bars:bartest");
     ConfiguredTarget bartestTarget = mock(ConfiguredTarget.class);
     when(bartestTarget.getLabel()).thenReturn(bartestLabel);
 
@@ -708,26 +996,26 @@ public class UiStateTrackerTest extends FoundationTestCase {
       stateTracker.testSummary(testSummary);
     }
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
     assertWithMessage(
-            "Only lines with at most 70 chars should be present in the output:\n" + output)
+            "Only lines with at most 70 chars should be present in the output:\n%s", output)
         .that(longestLine(output) <= 70)
         .isTrue();
     if (actions >= 1) {
-      assertWithMessage("Running action 'foobuild' should be mentioned in output:\n" + output)
+      assertWithMessage("Running action 'foobuild' should be mentioned in output:\n%s", output)
           .that(output.contains("foobuild"))
           .isTrue();
     }
     if (actions >= 2) {
-      assertWithMessage("Running action 'bazbuild' should be mentioned in output:\n" + output)
+      assertWithMessage("Running action 'bazbuild' should be mentioned in output:\n%s", output)
           .that(output.contains("bazbuild"))
           .isTrue();
     }
     if (withTest) {
-      assertWithMessage("Passed test ':bartest' should be mentioned in output:\n" + output)
+      assertWithMessage("Passed test ':bartest' should be mentioned in output:\n%s", output)
           .that(output.contains(":bartest"))
           .isTrue();
     }
@@ -749,12 +1037,14 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // more than one active action and not all are running.
     ManualClock clock = new ManualClock();
     clock.advanceMillis(120000);
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     Action actionFoo = mockAction("Building foo", "foo/foo");
-    ActionOwner ownerFoo = mock(ActionOwner.class);
+    ActionOwner ownerFoo = dummyActionOwner();
     when(actionFoo.getOwner()).thenReturn(ownerFoo);
     Action actionBar = mockAction("Building bar", "bar/bar");
-    ActionOwner ownerBar = mock(ActionOwner.class);
+    ActionOwner ownerBar = dummyActionOwner();
     when(actionBar.getOwner()).thenReturn(ownerBar);
     LoggingTerminalWriter terminalWriter;
     String output;
@@ -763,10 +1053,10 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(actionFoo, 123456700));
     stateTracker.scanningAction(new ScanningActionEvent(actionFoo));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Action foo being scanned should be visible in output:\n" + output)
+    assertWithMessage("Action foo being scanned should be visible in output:\n%s", output)
         .that(output.contains("sca") || output.contains("Sca"))
         .isTrue();
 
@@ -774,19 +1064,19 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(actionBar, 123456701));
     stateTracker.schedulingAction(new SchedulingActionEvent(actionBar, "bar-sandbox"));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Action bar being scheduled should be visible in output:\n" + output)
+    assertWithMessage("Action bar being scheduled should be visible in output:\n%s", output)
         .that(output.contains("sch") || output.contains("Sch"))
         .isTrue();
-    assertWithMessage("Action foo being scanned should still be visible in output:\n" + output)
+    assertWithMessage("Action foo being scanned should still be visible in output:\n%s", output)
         .that(output.contains("sca") || output.contains("Sca"))
         .isTrue();
-    assertWithMessage("Indication at no actions are running is missing in output:\n" + output)
+    assertWithMessage("Indication that no actions are running is missing in output:\n%s", output)
         .that(output.contains("0 running"))
         .isTrue();
-    assertWithMessage("Total number of actions expected  in output:\n" + output)
+    assertWithMessage("Total number of actions expected  in output:\n%s", output)
         .that(output.contains("2 actions"))
         .isTrue();
 
@@ -794,22 +1084,22 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.runningAction(new RunningActionEvent(actionFoo, "xyz-sandbox"));
     stateTracker.writeProgressBar(terminalWriter);
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Action foo's xyz-sandbox strategy should be shown in output:\n" + output)
+    assertWithMessage("Action foo's xyz-sandbox strategy should be shown in output:\n%s", output)
         .that(output.contains("xyz-sandbox"))
         .isTrue();
-    assertWithMessage("Action foo should no longer be analyzed in output:\n" + output)
+    assertWithMessage("Action foo should no longer be analyzed in output:\n%s", output)
         .that(output.contains("ana") || output.contains("Ana"))
         .isFalse();
-    assertWithMessage("Action bar being scheduled should still be visible in output:\n" + output)
+    assertWithMessage("Action bar being scheduled should still be visible in output:\n%s", output)
         .that(output.contains("sch") || output.contains("Sch"))
         .isTrue();
-    assertWithMessage("Indication at one action is running is missing in output:\n" + output)
+    assertWithMessage("Indication that one action is running is missing in output:\n%s", output)
         .that(output.contains("1 running"))
         .isTrue();
-    assertWithMessage("Total number of actions expected  in output:\n" + output)
+    assertWithMessage("Total number of actions expected  in output:\n%s", output)
         .that(output.contains("2 actions"))
         .isTrue();
   }
@@ -821,16 +1111,18 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(123));
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(2));
     LoggingTerminalWriter terminalWriter;
     String output;
 
     Action actionFoo = mockAction("Building foo", "foo/foo");
-    ActionOwner ownerFoo = mock(ActionOwner.class);
+    ActionOwner ownerFoo = dummyActionOwner();
     when(actionFoo.getOwner()).thenReturn(ownerFoo);
     Action actionBar = mockAction("Building bar", "bar/bar");
-    ActionOwner ownerBar = mock(ActionOwner.class);
+    ActionOwner ownerBar = dummyActionOwner();
     when(actionBar.getOwner()).thenReturn(ownerBar);
 
     stateTracker.actionStarted(new ActionStartedEvent(actionFoo, clock.nanoTime()));
@@ -840,35 +1132,35 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.schedulingAction(new SchedulingActionEvent(actionBar, "bar-sandbox"));
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(21));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should be visible in output: " + output)
+    assertWithMessage("Runtime of first action should be visible in output: %s", output)
         .that(output.contains("28s"))
         .isTrue();
-    assertWithMessage("Scheduling time of second action should be visible in output: " + output)
+    assertWithMessage("Scheduling time of second action should be visible in output: %s", output)
         .that(output.contains("21s"))
         .isTrue();
 
     stateTracker.runningAction(new RunningActionEvent(actionBar, "bar-sandbox"));
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should still be visible in output: " + output)
+    assertWithMessage("Runtime of first action should still be visible in output: %s", output)
         .that(output.contains("28s"))
         .isTrue();
-    assertWithMessage("Time of second action should no longer be visible in output: " + output)
+    assertWithMessage("Time of second action should no longer be visible in output: %s", output)
         .that(output.contains("21s"))
         .isFalse();
 
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(30));
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("New runtime of first action should be visible in output: " + output)
+    assertWithMessage("New runtime of first action should be visible in output: %s", output)
         .that(output.contains("58s"))
         .isTrue();
-    assertWithMessage("Runtime of second action should be visible in output: " + output)
+    assertWithMessage("Runtime of second action should be visible in output: %s", output)
         .that(output.contains("30s"))
         .isTrue();
   }
@@ -878,9 +1170,11 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // On the event bus, events sometimes are sent out of order; verify that we handle an
     // early message that an action is running gracefully.
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     Action actionFoo = mockAction("Building foo", "foo/foo");
-    ActionOwner ownerFoo = mock(ActionOwner.class);
+    ActionOwner ownerFoo = dummyActionOwner();
     when(actionFoo.getOwner()).thenReturn(ownerFoo);
     LoggingTerminalWriter terminalWriter;
     String output;
@@ -890,7 +1184,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     // Here we don't expect any particular output, just some description; in particular, we do
     // not expect the state tracker to hit an internal error.
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
     assertWithMessage("Expected at least some status bar").that(output).isNotEmpty();
@@ -898,10 +1192,10 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // Action actually started
     stateTracker.actionStarted(new ActionStartedEvent(actionFoo, clock.nanoTime()));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Even a strategy announced early should be shown in output:\n" + output)
+    assertWithMessage("Even a strategy announced early should be shown in output:\n%s", output)
         .that(output.contains("foo-sandbox"))
         .isTrue();
   }
@@ -910,12 +1204,14 @@ public class UiStateTrackerTest extends FoundationTestCase {
   public void testExecutingActionsFirst() throws Exception {
     // Verify that executing actions, even if started late, are visible.
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock);
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
     clock.advanceMillis(120000);
 
     for (int i = 0; i < 30; i++) {
       Action action = mockAction("Takes long to schedule number " + i, "long/startup" + i);
-      ActionOwner owner = mock(ActionOwner.class);
+      ActionOwner owner = dummyActionOwner();
       when(action.getOwner()).thenReturn(owner);
       stateTracker.actionStarted(new ActionStartedEvent(action, 123456789 + i));
       stateTracker.schedulingAction(new SchedulingActionEvent(action, "xyz-sandbox"));
@@ -923,18 +1219,19 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     for (int i = 0; i < 3; i++) {
       Action action = mockAction("quickstart" + i, "pkg/quickstart" + i);
-      ActionOwner owner = mock(ActionOwner.class);
+      ActionOwner owner = dummyActionOwner();
       when(action.getOwner()).thenReturn(owner);
       stateTracker.actionStarted(new ActionStartedEvent(action, 123457000 + i));
       stateTracker.runningAction(new RunningActionEvent(action, "xyz-sandbox"));
 
-      LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+      LoggingTerminalWriter terminalWriter =
+          new LoggingTerminalWriter(/* discardHighlight= */ true);
       stateTracker.writeProgressBar(terminalWriter);
       String output = terminalWriter.getTranscript();
-      assertWithMessage("Action quickstart" + i + " should be visible in output:\n" + output)
+      assertWithMessage("Action quickstart%s should be visible in output:\n%s", i, output)
           .that(output.contains("quickstart" + i))
           .isTrue();
-      assertWithMessage("Number of running actions should be indicated in output:\n" + output)
+      assertWithMessage("Number of running actions should be indicated in output:\n%s", output)
           .that(output.contains((i + 1) + " running"))
           .isTrue();
     }
@@ -946,47 +1243,68 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // is still shown.
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1234));
-    UiStateTracker stateTracker = new UiStateTracker(clock, 80);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
+    stateTracker.setProgressSampleSize(4);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
 
-    Label labelFooTest = Label.parseAbsolute("//foo/bar:footest", ImmutableMap.of());
+    Label labelFooTest = Label.parseCanonical("//foo/bar:footest");
     ConfiguredTarget targetFooTest = mock(ConfiguredTarget.class);
     when(targetFooTest.getLabel()).thenReturn(labelFooTest);
     ActionOwner fooOwner =
-        ActionOwner.create(
+        ActionOwner.createDummy(
             labelFooTest,
-            ImmutableList.of(),
             new Location("dummy-file", 0, 0),
-            "dummy-mnemonic",
-            "dummy-target-kind",
-            "abcdef",
+            /* targetKind= */ "dummy-target-kind",
+            /* buildConfigurationMnemonic= */ "TestRunner",
+            /* configurationChecksum= */ "abcdef",
             new BuildConfigurationEvent(
                 BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
                 BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
-            null,
-            ImmutableMap.of(),
-            null);
+            /* isToolConfiguration= */ false,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
+            /* aspectDescriptors= */ ImmutableList.of(),
+            /* execProperties= */ ImmutableMap.of());
 
-    Label labelBarTest = Label.parseAbsolute("//baz:bartest", ImmutableMap.of());
+    Label labelBarTest = Label.parseCanonical("//baz:bartest");
     ConfiguredTarget targetBarTest = mock(ConfiguredTarget.class);
     when(targetBarTest.getLabel()).thenReturn(labelBarTest);
-    TestFilteringCompleteEvent filteringComplete = mock(TestFilteringCompleteEvent.class);
-    when(filteringComplete.getTestTargets())
-        .thenReturn(ImmutableSet.of(targetFooTest, targetBarTest));
     ActionOwner barOwner =
-        ActionOwner.create(
+        ActionOwner.createDummy(
             labelBarTest,
-            ImmutableList.of(),
             new Location("dummy-file", 0, 0),
-            "dummy-mnemonic",
-            "dummy-target-kind",
-            "fedcba",
+            /* targetKind= */ "dummy-target-kind",
+            /* buildConfigurationMnemonic= */ "TestRunner",
+            /* configurationChecksum= */ "abcdef",
             new BuildConfigurationEvent(
                 BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
                 BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
-            null,
-            ImmutableMap.of(),
-            null);
+            /* isToolConfiguration= */ false,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
+            /* aspectDescriptors= */ ImmutableList.of(),
+            /* execProperties= */ ImmutableMap.of());
 
+    Label labelBazTest = Label.parseCanonical("//baz:baztest");
+    ConfiguredTarget targetBazTest = mock(ConfiguredTarget.class);
+    when(targetBazTest.getLabel()).thenReturn(labelBazTest);
+    ActionOwner bazOwner =
+        ActionOwner.createDummy(
+            labelBazTest,
+            new Location("dummy-file", 0, 0),
+            /* targetKind= */ "dummy-target-kind",
+            /* buildConfigurationMnemonic= */ "NonTestAction",
+            /* configurationChecksum= */ "fedcba",
+            new BuildConfigurationEvent(
+                BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
+                BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
+            /* isToolConfiguration= */ false,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
+            /* aspectDescriptors= */ ImmutableList.of(),
+            /* execProperties= */ ImmutableMap.of());
+
+    TestFilteringCompleteEvent filteringComplete = mock(TestFilteringCompleteEvent.class);
+    when(filteringComplete.getTestTargets())
+        .thenReturn(ImmutableSet.of(targetFooTest, targetBarTest, targetBazTest));
     stateTracker.testFilteringComplete(filteringComplete);
 
     // First produce 10 actions for footest...
@@ -1003,25 +1321,34 @@ public class UiStateTrackerTest extends FoundationTestCase {
       when(action.getOwner()).thenReturn(barOwner);
       stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     }
-    // ...and finally a completely unrelated action
+    // ...run a completely unrelated action..
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     stateTracker.actionStarted(
         new ActionStartedEvent(mockAction("Other action", "other/action"), clock.nanoTime()));
+    // ...and finally, run actions that are associated with baztest but are not a test.
+    for (int i = 0; i < 10; i++) {
+      clock.advanceMillis(1_000);
+      Action action = mockAction("Doing something " + i, "someartifact_" + i);
+      when(action.getOwner()).thenReturn(bazOwner);
+      stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
+    }
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage("Progress bar should contain ':footest', but was:\n" + output)
+    assertWithMessage("Progress bar should contain ':footest', but was:\n%s", output)
         .that(output.contains(":footest"))
         .isTrue();
-    assertWithMessage("Progress bar should contain ':bartest', but was:\n" + output)
+    assertWithMessage("Progress bar should contain ':bartest', but was:\n%s", output)
         .that(output.contains(":bartest"))
         .isTrue();
-    assertWithMessage("Progress bar should contain 'Other action', but was:\n" + output)
+    assertWithMessage("Progress bar should contain 'Other action', but was:\n%s", output)
         .that(output.contains("Other action"))
         .isTrue();
+    assertThat(output).doesNotContain("Testing //baz:baztest");
+    assertThat(output).contains("Doing something");
   }
 
   @Test
@@ -1032,59 +1359,89 @@ public class UiStateTrackerTest extends FoundationTestCase {
   }
 
   @Test
-  public void testDownloadShown() throws Exception {
-    // Verify that, whenever a single download is running in loading face, it is shown in the status
-    // bar.
+  public void testDownloadShown_duringLoading() throws Exception {
+    // Verify that, whenever a single download is running in loading phase, it is shown in the
+    // status bar.
     ManualClock clock = new ManualClock();
-    clock.advanceMillis(TimeUnit.SECONDS.toMillis(1234));
-    UiStateTracker stateTracker = new UiStateTracker(clock, 80);
+    clock.advance(Duration.ofSeconds(1234));
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
 
-    URL url = new URL("http://example.org/first/dep");
+    URI url = URI.create("http://example.org/first/dep");
 
     stateTracker.buildStarted();
     stateTracker.downloadProgress(new DownloadProgressEvent(url));
-    clock.advanceMillis(TimeUnit.SECONDS.toMillis(6));
+    clock.advance(Duration.ofSeconds(6));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage("Progress bar should contain '" + url.toString() + "', but was:\n" + output)
-        .that(output.contains(url.toString()))
-        .isTrue();
-    assertWithMessage("Progress bar should contain '6s', but was:\n" + output)
-        .that(output.contains("6s"))
-        .isTrue();
+    assertThat(output).contains(url.toString());
+    assertThat(output).contains("6s");
 
     // Progress on the pending download should be reported appropriately
-    clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
+    clock.advance(Duration.ofSeconds(1));
     stateTracker.downloadProgress(new DownloadProgressEvent(url, 256));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
 
-    assertWithMessage("Progress bar should contain '" + url.toString() + "', but was:\n" + output)
-        .that(output.contains(url.toString()))
-        .isTrue();
-    assertWithMessage("Progress bar should contain '7s', but was:\n" + output)
-        .that(output.contains("7s"))
-        .isTrue();
-    assertWithMessage("Progress bar should contain '256', but was:\n" + output)
-        .that(output.contains("256"))
-        .isTrue();
+    assertThat(output).contains(url.toString());
+    assertThat(output).contains("7s");
+    assertThat(output).contains("256");
 
     // After finishing the download, it should no longer be reported.
-    clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
+    clock.advance(Duration.ofSeconds(1));
     stateTracker.downloadProgress(new DownloadProgressEvent(url, 256, true));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
 
-    assertWithMessage("Progress bar should not contain url, but was:\n" + output)
-        .that(output.contains("example.org"))
-        .isFalse();
+    assertThat(output).doesNotContain("example.org");
+  }
+
+  @Test
+  public void testDownloadShown_duringMainRepoMappingComputation() throws Exception {
+    ManualClock clock = new ManualClock();
+    clock.advance(Duration.ofSeconds(1234));
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
+
+    URI url = URI.create("http://example.org/first/dep");
+
+    stateTracker.mainRepoMappingComputationStarted();
+    stateTracker.downloadProgress(new DownloadProgressEvent(url));
+    clock.advance(Duration.ofSeconds(6));
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter);
+    String output = terminalWriter.getTranscript();
+
+    assertThat(output).contains(url.toString());
+    assertThat(output).contains("6s");
+
+    // Progress on the pending download should be reported appropriately
+    clock.advance(Duration.ofSeconds(1));
+    stateTracker.downloadProgress(new DownloadProgressEvent(url, 256));
+
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter);
+    output = terminalWriter.getTranscript();
+
+    assertThat(output).contains(url.toString());
+    assertThat(output).contains("7s");
+    assertThat(output).contains("256");
+
+    // After finishing the download, it should no longer be reported.
+    clock.advance(Duration.ofSeconds(1));
+    stateTracker.downloadProgress(new DownloadProgressEvent(url, 256, true));
+
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter);
+    output = terminalWriter.getTranscript();
+
+    assertThat(output).doesNotContain("example.org");
   }
 
   @Test
@@ -1093,8 +1450,8 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // Also verify that the length is respected, even if only a download sample is shown.
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1234));
-    UiStateTracker stateTracker = new UiStateTracker(clock, 60);
-    URL url = new URL("http://example.org/some/really/very/very/long/path/filename.tar.gz");
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 60);
+    URI url = URI.create("http://example.org/some/really/very/very/long/path/filename.tar.gz");
 
     stateTracker.buildStarted();
     stateTracker.downloadProgress(new DownloadProgressEvent(url));
@@ -1102,25 +1459,25 @@ public class UiStateTrackerTest extends FoundationTestCase {
     for (int i = 0; i < 10; i++) {
       stateTracker.downloadProgress(
           new DownloadProgressEvent(
-              new URL(
+              URI.create(
                   "http://otherhost.example/another/also/length/path/to/another/download"
                       + i
                       + ".zip")));
       clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     }
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
     assertWithMessage(
-            "Only lines with at most 60 chars should be present in the output:\n" + output)
+            "Only lines with at most 60 chars should be present in the output:\n%s", output)
         .that(longestLine(output) <= 60)
         .isTrue();
-    assertWithMessage("Output still should contain the filename, but was:\n" + output)
+    assertWithMessage("Output still should contain the filename, but was:\n%s", output)
         .that(output.contains("filename.tar.gz"))
         .isTrue();
-    assertWithMessage("Output still should contain the host name, but was:\n" + output)
+    assertWithMessage("Output still should contain the host name, but was:\n%s", output)
         .that(output.contains("example.org"))
         .isTrue();
   }
@@ -1140,13 +1497,13 @@ public class UiStateTrackerTest extends FoundationTestCase {
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     buildResult.setStopTime(clock.currentTimeMillis());
 
-    UiStateTracker stateTracker = new UiStateTracker(clock, 80);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
     stateTracker.buildStarted();
     stateTracker.buildEventTransportsAnnounced(
         new AnnounceBuildEventTransportsEvent(ImmutableList.of(transport1, transport2)));
     stateTracker.buildEventTransportsAnnounced(
         new AnnounceBuildEventTransportsEvent(ImmutableList.of(transport3)));
-    stateTracker.buildComplete(new BuildCompleteEvent(buildResult));
+    var unused = stateTracker.buildComplete(new BuildCompleteEvent(buildResult));
 
     LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(true);
 
@@ -1157,8 +1514,6 @@ public class UiStateTrackerTest extends FoundationTestCase {
     assertThat(output, containsString("BuildEventTransport1"));
     assertThat(output, containsString("BuildEventTransport2"));
     assertThat(output, containsString("BuildEventTransport3"));
-    assertThat(output, containsString("success"));
-    assertThat(output, containsString("complete"));
 
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     stateTracker.buildEventTransportClosed(new BuildEventTransportClosedEvent(transport1));
@@ -1169,8 +1524,6 @@ public class UiStateTrackerTest extends FoundationTestCase {
     assertThat(output, not(containsString("BuildEventTransport1")));
     assertThat(output, containsString("BuildEventTransport2"));
     assertThat(output, containsString("BuildEventTransport3"));
-    assertThat(output, containsString("success"));
-    assertThat(output, containsString("complete"));
 
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     stateTracker.buildEventTransportClosed(new BuildEventTransportClosedEvent(transport3));
@@ -1181,8 +1534,6 @@ public class UiStateTrackerTest extends FoundationTestCase {
     assertThat(output, not(containsString("BuildEventTransport1")));
     assertThat(output, containsString("BuildEventTransport2"));
     assertThat(output, not(containsString("BuildEventTransport3")));
-    assertThat(output, containsString("success"));
-    assertThat(output, containsString("complete"));
 
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     stateTracker.buildEventTransportClosed(new BuildEventTransportClosedEvent(transport2));
@@ -1193,8 +1544,6 @@ public class UiStateTrackerTest extends FoundationTestCase {
     assertThat(output, not(containsString("BuildEventTransport1")));
     assertThat(output, not(containsString("BuildEventTransport2")));
     assertThat(output, not(containsString("BuildEventTransport3")));
-    assertThat(output, containsString("success"));
-    assertThat(output, containsString("complete"));
     assertThat(output.split("\\n")).hasLength(1);
   }
 
@@ -1203,25 +1552,23 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // Verify that the progress bar contains useful information on a 60-character terminal.
     //   - Too long names should be shortened to reasonably long prefixes of the name.
     ManualClock clock = new ManualClock();
-    BuildEventTransport transport1 = newBepTransport(Strings.repeat("A", 61));
+    BuildEventTransport transport1 = newBepTransport("A".repeat(61));
     BuildEventTransport transport2 = newBepTransport("BuildEventTransport");
     BuildResult buildResult = new BuildResult(clock.currentTimeMillis());
     buildResult.setDetailedExitCode(DetailedExitCode.success());
     LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(true);
-    UiStateTracker stateTracker = new UiStateTracker(clock, 60);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 60);
     stateTracker.buildStarted();
     stateTracker.buildEventTransportsAnnounced(
         new AnnounceBuildEventTransportsEvent(ImmutableList.of(transport1, transport2)));
-    stateTracker.buildComplete(new BuildCompleteEvent(buildResult));
+    var unused = stateTracker.buildComplete(new BuildCompleteEvent(buildResult));
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
     assertThat(longestLine(output)).isAtMost(60);
     assertThat(output, containsString("1s"));
-    assertThat(output, containsString(Strings.repeat("A", 30) + "..."));
+    assertThat(output, containsString("A".repeat(30) + "..."));
     assertThat(output, containsString("BuildEventTransport"));
-    assertThat(output, containsString("success"));
-    assertThat(output, containsString("complete"));
 
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     stateTracker.buildEventTransportClosed(new BuildEventTransportClosedEvent(transport2));
@@ -1230,10 +1577,8 @@ public class UiStateTrackerTest extends FoundationTestCase {
     output = terminalWriter.getTranscript();
     assertThat(longestLine(output)).isAtMost(60);
     assertThat(output, containsString("2s"));
-    assertThat(output, containsString(Strings.repeat("A", 30) + "..."));
+    assertThat(output, containsString("A".repeat(30) + "..."));
     assertThat(output, not(containsString("BuildEventTransport")));
-    assertThat(output, containsString("success"));
-    assertThat(output, containsString("complete"));
     assertThat(output.split("\\n")).hasLength(2);
   }
 
@@ -1246,7 +1591,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
   @Test
   public void testTotalFetchesReported() throws IOException {
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = new UiStateTracker(clock, 80);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
 
     stateTracker.buildStarted();
     for (int i = 0; i < 30; i++) {
@@ -1260,43 +1605,6 @@ public class UiStateTrackerTest extends FoundationTestCase {
     assertThat(output, containsString("@repoFoo"));
     assertThat(output, containsString("7s"));
     assertThat(output, containsString("30 fetches"));
-  }
-
-  private Action mockActionWithMnemonic(String mnemonic, String primaryOutput) {
-    Path path = outputBase.getRelative(PathFragment.create(primaryOutput));
-    Artifact artifact =
-        ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path);
-    Action action = mock(Action.class);
-    when(action.getMnemonic()).thenReturn(mnemonic);
-    when(action.getPrimaryOutput()).thenReturn(artifact);
-    return action;
-  }
-
-  @Test
-  public void testMnemonicHistogram() throws IOException {
-    // Verify that the number of actions shown in the progress bar can be set as sample size.
-    ManualClock clock = new ManualClock();
-    clock.advanceMillis(Duration.ofSeconds(123).toMillis());
-    UiStateTracker stateTracker = new UiStateTracker(clock);
-    clock.advanceMillis(Duration.ofSeconds(2).toMillis());
-
-    // Start actions with 10 different mnemonics Mnemonic0-9, n+1 of each mnemonic.
-    for (int i = 0; i < 10; i++) {
-      clock.advanceMillis(Duration.ofSeconds(1).toMillis());
-      for (int j = 0; j <= i; j++) {
-        Action action = mockActionWithMnemonic("Mnemonic" + i, "action-" + i + "-" + j + ".out");
-        stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
-      }
-    }
-
-    for (int sampleSize = 1; sampleSize < 11; sampleSize++) {
-      stateTracker.setProgressMode(ProgressMode.MNEMONIC_HISTOGRAM, sampleSize);
-      LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-      stateTracker.writeProgressBar(terminalWriter);
-      String output = terminalWriter.getTranscript();
-      assertThat(output).contains("Mnemonic" + (10 - sampleSize) + " " + (10 - sampleSize + 1));
-      assertThat(output).doesNotContain("Mnemonic" + (10 - sampleSize - 1));
-    }
   }
 
   private static class FetchEvent implements FetchProgress {
@@ -1320,5 +1628,172 @@ public class UiStateTrackerTest extends FoundationTestCase {
     public boolean isFinished() {
       return false;
     }
+  }
+
+  @Test
+  public void waitingRemoteCacheMessage_beforeBuildComplete_invisible() throws IOException {
+    ManualClock clock = new ManualClock();
+    Action action = mockAction("Some action", "foo");
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    stateTracker.actionUploadStarted(
+        ActionUploadStartedEvent.create(
+            action, Store.AC, Digest.newBuilder().setHash("foo").setSizeBytes(1).build()));
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+
+    stateTracker.writeProgressBar(terminalWriter);
+
+    String output = terminalWriter.getTranscript();
+    assertThat(output).doesNotContain("1 upload");
+  }
+
+  @Test
+  public void waitingRemoteCacheMessage_afterBuildComplete_visible() throws IOException {
+    ManualClock clock = new ManualClock();
+    Action action = mockAction("Some action", "foo");
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    stateTracker.actionUploadStarted(
+        ActionUploadStartedEvent.create(
+            action, Store.AC, Digest.newBuilder().setHash("foo").setSizeBytes(1).build()));
+    BuildResult buildResult = new BuildResult(clock.currentTimeMillis());
+    buildResult.setDetailedExitCode(DetailedExitCode.success());
+    buildResult.setStopTime(clock.currentTimeMillis());
+    var unused = stateTracker.buildComplete(new BuildCompleteEvent(buildResult));
+    clock.advanceMillis(Duration.ofSeconds(2).toMillis());
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+
+    stateTracker.writeProgressBar(terminalWriter);
+
+    String output = terminalWriter.getTranscript();
+    assertThat(output).contains("1 upload");
+  }
+
+  @Test
+  public void waitingRemoteCacheMessage_multipleUploadEvents_countCorrectly() throws IOException {
+    Digest a = Digest.newBuilder().setHash("a").setSizeBytes(1).build();
+    Digest b = Digest.newBuilder().setHash("b").setSizeBytes(2).build();
+    Digest c = Digest.newBuilder().setHash("c").setSizeBytes(3).build();
+    ManualClock clock = new ManualClock();
+    Action action = mockAction("Some action", "foo");
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    stateTracker.actionUploadStarted(ActionUploadStartedEvent.create(action, Store.AC, a));
+    BuildResult buildResult = new BuildResult(clock.currentTimeMillis());
+    buildResult.setDetailedExitCode(DetailedExitCode.success());
+    buildResult.setStopTime(clock.currentTimeMillis());
+    var unused = stateTracker.buildComplete(new BuildCompleteEvent(buildResult));
+    stateTracker.actionUploadStarted(ActionUploadStartedEvent.create(action, Store.CAS, b));
+    stateTracker.actionUploadStarted(ActionUploadStartedEvent.create(action, Store.CAS, c));
+    stateTracker.actionUploadFinished(ActionUploadFinishedEvent.create(action, Store.AC, a));
+    clock.advanceMillis(Duration.ofSeconds(2).toMillis());
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+
+    stateTracker.writeProgressBar(terminalWriter);
+
+    String output = terminalWriter.getTranscript();
+    assertThat(output).contains("2 uploads");
+  }
+
+  @Test
+  public void testTestAnalyzedEvent() throws Exception {
+    // The test count should be visible in the status bar, as well as the short status bar
+    ManualClock clock = new ManualClock();
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    Label labelA = Label.parseCanonical("//foo:A");
+    ConfiguredTarget targetA = mock(ConfiguredTarget.class);
+    when(targetA.getLabel()).thenReturn(labelA);
+    TestAnalyzedEvent testAnalyzedEventA =
+        TestAnalyzedEvent.create(
+            targetA, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
+    Label labelB = Label.parseCanonical("//foo:B");
+    ConfiguredTarget targetB = mock(ConfiguredTarget.class);
+    when(targetB.getLabel()).thenReturn(labelB);
+    TestAnalyzedEvent testAnalyzedEventB =
+        TestAnalyzedEvent.create(
+            targetB, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
+    // Only targetA has finished running.
+    TestSummary testSummary = mock(TestSummary.class);
+    when(testSummary.getTarget()).thenReturn(targetA);
+    when(testSummary.getLabel()).thenReturn(labelA);
+
+    stateTracker.singleTestAnalyzed(testAnalyzedEventA);
+    stateTracker.singleTestAnalyzed(testAnalyzedEventB);
+    stateTracker.testSummary(testSummary);
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter);
+    String output = terminalWriter.getTranscript();
+    assertThat(output).contains(" 1 / 2 tests");
+
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
+    output = terminalWriter.getTranscript();
+    assertThat(output).contains(" 1 / 2 tests");
+  }
+
+  @Test
+  public void testTestAnalyzedEvent_repeated_noDuplicatedCount() throws Exception {
+    // The test count should be visible in the status bar, as well as the short status bar
+    ManualClock clock = new ManualClock();
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    // Mimic being at the execution phase.
+    simulateExecutionPhase(stateTracker);
+    Label labelA = Label.parseCanonical("//foo:A");
+    ConfiguredTarget targetA = mock(ConfiguredTarget.class);
+    when(targetA.getLabel()).thenReturn(labelA);
+    TestAnalyzedEvent testAnalyzedEventA =
+        TestAnalyzedEvent.create(
+            targetA, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
+    TestAnalyzedEvent testAnalyzedEventARepeated =
+        TestAnalyzedEvent.create(
+            targetA, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
+    // Only targetA has finished running.
+    TestSummary testSummary = mock(TestSummary.class);
+    when(testSummary.getTarget()).thenReturn(targetA);
+    when(testSummary.getLabel()).thenReturn(labelA);
+
+    stateTracker.singleTestAnalyzed(testAnalyzedEventA);
+    stateTracker.singleTestAnalyzed(testAnalyzedEventARepeated);
+    stateTracker.testSummary(testSummary);
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter);
+    String output = terminalWriter.getTranscript();
+    assertThat(output).contains(" 1 / 1 tests");
+
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
+    output = terminalWriter.getTranscript();
+    assertThat(output).contains(" 1 / 1 tests");
+  }
+
+  @Test
+  public void testGetOldestAction_prioritizesRunningOverScheduled() throws Exception {
+    ManualClock clock = new ManualClock();
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    simulateExecutionPhase(stateTracker);
+
+    Action scheduledAction = mockAction("Scheduled action", "scheduled/action");
+    when(scheduledAction.getOwner()).thenReturn(dummyActionOwner());
+    stateTracker.actionStarted(new ActionStartedEvent(scheduledAction, clock.nanoTime()));
+    stateTracker.schedulingAction(new SchedulingActionEvent(scheduledAction, "some-strategy"));
+
+    clock.advanceMillis(1000);
+    Action runningAction = mockAction("Running action", "running/action");
+    when(runningAction.getOwner()).thenReturn(dummyActionOwner());
+    stateTracker.actionStarted(new ActionStartedEvent(runningAction, clock.nanoTime()));
+    stateTracker.runningAction(new RunningActionEvent(runningAction, "some-strategy"));
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
+    String output = terminalWriter.getTranscript();
+
+    assertThat(output).contains("Running action");
+    assertThat(output).contains("(2 actions, 1 running)");
+    assertThat(output).doesNotContain("Scheduled action");
   }
 }
