@@ -15,7 +15,6 @@
 package com.google.devtools.build.lib.util;
 
 import static com.google.common.truth.Truth.assertThat;
-import static com.google.common.truth.Truth8.assertThat;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertThrows;
 
@@ -101,7 +100,7 @@ public final class SimpleLogHandlerTest {
         SimpleLogHandler.builder().setPrefix(tmp.getRoot() + File.separator + "hello").build();
     handler.publish(new LogRecord(Level.SEVERE, "Hello world")); // To open the log file.
     assertThat(handler.getCurrentLogFilePath().get().toString())
-        .endsWith("." + SimpleLogHandler.getPidString());
+        .endsWith("." + ProcessHandle.current().pid());
   }
 
   @Test
@@ -179,7 +178,7 @@ public final class SimpleLogHandlerTest {
     Path logPath = handler.getCurrentLogFilePath().get();
     handler.close();
 
-    assertThat(new String(Files.readAllBytes(logPath), UTF_8)).isEqualTo("Hello world\n");
+    assertThat(Files.readString(logPath)).isEqualTo("Hello world\n");
   }
 
   @Test
@@ -238,7 +237,7 @@ public final class SimpleLogHandlerTest {
   }
 
   @Test
-  public void testSymlinkDisabling() throws Exception {
+  public void testSymlinkDisabling() {
     SimpleLogHandler handler =
         SimpleLogHandler.builder()
             .setPrefix(tmp.getRoot() + File.separator + "hello")
@@ -256,7 +255,7 @@ public final class SimpleLogHandlerTest {
             .setPrefix(tmp.getRoot() + File.separator + "hello")
             .setSymlinkName("bye" + File.separator + "bye")
             .setCreateSymlink(true);
-    assertThrows(IllegalArgumentException.class, () -> builder.build());
+    assertThrows(IllegalArgumentException.class, builder::build);
   }
 
   @Test
